--- a/gst-plugins-bad/po/af.po
+++ b/gst-plugins-bad/po/af.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.7.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2004-03-18 14:16+0200\n"
 "Last-Translator: Petri Jooste <rkwjpj@puk.ac.za>\n"
 "Language-Team: Afrikaans <i18n@af.org.za>\n"
@@ -72,7 +72,222 @@ msgid ""
 "Open Sound System is not supported by this element."
 msgstr ""
 
+msgid "Volume"
+msgstr "Volume"
+
+msgid "Master"
+msgstr ""
+
+msgid "Front"
+msgstr ""
+
+#, fuzzy
+msgid "Rear"
+msgstr "Neem op"
+
+msgid "Headphones"
+msgstr ""
+
+msgid "Center"
+msgstr ""
+
+msgid "LFE"
+msgstr ""
+
+msgid "Surround"
+msgstr ""
+
+#, fuzzy
+msgid "Side"
+msgstr "Video"
+
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "Luidspreker"
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr "Bas"
+
+msgid "Treble"
+msgstr "Treble"
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+msgid "Telephone"
+msgstr ""
+
+msgid "Microphone"
+msgstr "Mikrofoon"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Lyn-in"
+
+msgid "Internal CD"
+msgstr ""
+
+#, fuzzy
+msgid "Video In"
+msgstr "Video"
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+#, fuzzy
+msgid "Record Gain"
+msgstr "Neem op"
+
+#, fuzzy
+msgid "Output Gain"
+msgstr "Uit-versterking"
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofoon"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr ""
+
+#, fuzzy
+msgid "Record Source"
+msgstr "Neem op"
+
+#, fuzzy
+msgid "Monitor Source"
+msgstr "Monitor"
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr "Monitor"
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr ""
+
+msgid "Surround Sound"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofoon"
+
+#, fuzzy
+msgid "Speaker Source"
+msgstr "Luidspreker"
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofoon"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr ""
+
+msgid "Stereo Mix"
+msgstr ""
+
+msgid "Mono Mix"
+msgstr ""
+
+msgid "Input Mix"
+msgstr ""
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofoon"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofoon"
+
+#, fuzzy
+msgid "Digital Out"
+msgstr "Digitaal-1"
+
+#, fuzzy
+msgid "Digital In"
+msgstr "Digitaal-1"
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr ""
+
+msgid "Off"
+msgstr ""
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
+msgstr ""
+
+msgid "Very Low"
 msgstr ""
 
 msgid "Low"
@@ -84,196 +299,100 @@ msgstr ""
 msgid "High"
 msgstr ""
 
-msgid "Very high"
+msgid "Very High"
 msgstr ""
 
 msgid "Production"
 msgstr ""
 
-msgid "Off"
-msgstr ""
-
-msgid "On"
-msgstr ""
-
-msgid "Stereo"
-msgstr ""
-
-msgid "Surround sound"
-msgstr ""
-
-msgid "Input mix"
-msgstr ""
-
-msgid "Front"
-msgstr ""
-
 #, fuzzy
-msgid "Rear"
-msgstr "Neem op"
-
-#, fuzzy
-msgid "Side"
-msgstr "Video"
-
-msgid "Center / LFE"
-msgstr ""
-
-msgid "Microphone"
+msgid "Front Panel Microphone"
 msgstr "Mikrofoon"
 
-msgid "Front panel microphone"
+msgid "Front Panel Line In"
 msgstr ""
 
-msgid "Input"
+msgid "Front Panel Headphones"
 msgstr ""
 
-msgid "Line-in"
-msgstr "Lyn-in"
-
-#, fuzzy
-msgid "PCM 1"
-msgstr "PCM"
-
-#, fuzzy
-msgid "PCM 2"
-msgstr "PCM-2"
-
-#, fuzzy
-msgid "PCM 3"
-msgstr "PCM"
-
-#, fuzzy
-msgid "PCM 4"
-msgstr "PCM"
-
-msgid "Green connector"
+msgid "Front Panel Line Out"
 msgstr ""
 
-msgid "Green front panel connector"
+msgid "Green Connector"
 msgstr ""
 
-msgid "Pink connector"
+msgid "Pink Connector"
 msgstr ""
 
-msgid "Pink front panel connector"
+msgid "Blue Connector"
 msgstr ""
 
-msgid "Blue connector"
+msgid "White Connector"
 msgstr ""
 
-msgid "Blue front panel connector"
+msgid "Black Connector"
 msgstr ""
 
-msgid "Orange connector"
+msgid "Gray Connector"
 msgstr ""
 
-msgid "Orange front panel connector"
+msgid "Orange Connector"
 msgstr ""
 
-msgid "Black connector"
+msgid "Red Connector"
 msgstr ""
 
-msgid "Black front panel connector"
+msgid "Yellow Connector"
 msgstr ""
 
-msgid "Gray connector"
+msgid "Green Front Panel Connector"
 msgstr ""
 
-msgid "Gray front panel connector"
+msgid "Pink Front Panel Connector"
 msgstr ""
 
-msgid "White connector"
+msgid "Blue Front Panel Connector"
 msgstr ""
 
-msgid "White front panel connector"
+msgid "White Front Panel Connector"
 msgstr ""
 
-msgid "Red connector"
+msgid "Black Front Panel Connector"
 msgstr ""
 
-msgid "Red front panel connector"
+msgid "Gray Front Panel Connector"
 msgstr ""
 
-msgid "Yellow connector"
+msgid "Orange Front Panel Connector"
 msgstr ""
 
-msgid "Yellow front panel connector"
+msgid "Red Front Panel Connector"
 msgstr ""
 
-msgid "Green connector function"
+msgid "Yellow Front Panel Connector"
 msgstr ""
 
-msgid "Green front panel connector function"
+msgid "Spread Output"
 msgstr ""
 
-msgid "Pink connector function"
+msgid "Downmix"
 msgstr ""
 
-msgid "Pink front panel connector function"
+msgid "Virtual Mixer Input"
 msgstr ""
 
-msgid "Blue connector function"
+msgid "Virtual Mixer Output"
 msgstr ""
 
-msgid "Blue front panel connector function"
+msgid "Virtual Mixer Channels"
 msgstr ""
 
-msgid "Orange connector function"
+#, c-format
+msgid "%s Function"
 msgstr ""
 
-msgid "Orange front panel connector function"
-msgstr ""
-
-msgid "Black connector function"
-msgstr ""
-
-msgid "Black front panel connector function"
-msgstr ""
-
-msgid "Gray connector function"
-msgstr ""
-
-msgid "Gray front panel connector function"
-msgstr ""
-
-msgid "White connector function"
-msgstr ""
-
-msgid "White front panel connector function"
-msgstr ""
-
-msgid "Red connector function"
-msgstr ""
-
-msgid "Red front panel connector function"
-msgstr ""
-
-msgid "Yellow connector function"
-msgstr ""
-
-msgid "Yellow front panel connector function"
-msgstr ""
-
-msgid "Front panel line-in"
-msgstr ""
-
-msgid "Headphones"
-msgstr ""
-
-msgid "Front panel headphones"
-msgstr ""
-
-msgid "PCM"
-msgstr "PCM"
-
-msgid "Virtual mixer input"
-msgstr ""
-
-msgid "Virtual mixer output"
-msgstr ""
-
-msgid "Virtual mixer channel configuration"
+#, c-format
+msgid "%s %d"
 msgstr ""
 
 msgid ""
@@ -355,20 +474,8 @@ msgstr ""
 #~ msgid "Could not open device \"%s\" for reading."
 #~ msgstr "Kon nie toestel \"%s\" oopmaak vir lees nie."
 
-#~ msgid "Volume"
-#~ msgstr "Volume"
-
-#~ msgid "Bass"
-#~ msgstr "Bas"
-
-#~ msgid "Treble"
-#~ msgstr "Treble"
-
 #~ msgid "Synth"
 #~ msgstr "Sintetiseerder"
-
-#~ msgid "Speaker"
-#~ msgstr "Luidspreker"
 
 #~ msgid "CD"
 #~ msgstr "CD"
@@ -376,11 +483,11 @@ msgstr ""
 #~ msgid "Mixer"
 #~ msgstr "Menger"
 
+#~ msgid "PCM-2"
+#~ msgstr "PCM-2"
+
 #~ msgid "In-gain"
 #~ msgstr "In-versterking"
-
-#~ msgid "Out-gain"
-#~ msgstr "Uit-versterking"
 
 #~ msgid "Line-1"
 #~ msgstr "Lyn-1"
@@ -390,9 +497,6 @@ msgstr ""
 
 #~ msgid "Line-3"
 #~ msgstr "Lyn-3"
-
-#~ msgid "Digital-1"
-#~ msgstr "Digitaal-1"
 
 #~ msgid "Digital-2"
 #~ msgstr "Digitaal-2"
@@ -408,13 +512,6 @@ msgstr ""
 
 #~ msgid "Radio"
 #~ msgstr "Radio"
-
-#~ msgid "Monitor"
-#~ msgstr "Monitor"
-
-#, fuzzy
-#~ msgid "PC Speaker"
-#~ msgstr "Luidspreker"
 
 #~ msgid "Could not open CD device for reading."
 #~ msgstr "Kon nie CD-toestel oopmaak om te lees nie."
