--- a/gst-plugins-bad/po/cs.po
+++ b/gst-plugins-bad/po/cs.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.9.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-01-18 18:55+0100\n"
 "Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
@@ -75,8 +75,219 @@ msgstr ""
 "Nezdařilo se otevření zvukového zařízení k obsluze ovládání směšovače. Tato "
 "verze Open Sound System není příslušným prvkem podporována."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Rychlé"
+
+msgid "Front"
+msgstr "Přední"
+
+msgid "Rear"
+msgstr "Zadní"
+
+msgid "Headphones"
+msgstr "Sluchátka"
+
+#, fuzzy
+msgid "Center"
+msgstr "Středový / LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Prostorový zvuk"
+
+msgid "Side"
+msgstr "Boční"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Sluchátka"
+
+msgid "Microphone"
+msgstr "Mikrofon"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Linkový vstup"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofon"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Vstup"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Stereo"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Prostorový zvuk"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofon"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofon"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Středový / LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Stereo"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Směšovač vstupu"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofon"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofon"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "Zapnuto"
+
+msgid "Off"
+msgstr "Vypnuto"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Rychlé"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Nízké"
@@ -87,191 +298,126 @@ msgstr "Střední"
 msgid "High"
 msgstr "Vysoké"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Velmi vysoké"
 
 msgid "Production"
 msgstr "Výroba"
 
-msgid "Off"
-msgstr "Vypnuto"
-
-msgid "On"
-msgstr "Zapnuto"
-
-msgid "Stereo"
-msgstr "Stereo"
-
-msgid "Surround sound"
-msgstr "Prostorový zvuk"
-
-msgid "Input mix"
-msgstr "Směšovač vstupu"
-
-msgid "Front"
-msgstr "Přední"
-
-msgid "Rear"
-msgstr "Zadní"
-
-msgid "Side"
-msgstr "Boční"
-
-msgid "Center / LFE"
-msgstr "Středový / LFE"
-
-msgid "Microphone"
-msgstr "Mikrofon"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Mikrofon na předním panelu"
 
-msgid "Input"
-msgstr "Vstup"
-
-msgid "Line-in"
-msgstr "Linkový vstup"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Zelený konektor"
-
-msgid "Green front panel connector"
-msgstr "Zelený konektor na předním panelu"
-
-msgid "Pink connector"
-msgstr "Růžový konektor"
-
-msgid "Pink front panel connector"
-msgstr "Růžový konektor na předním panelu"
-
-msgid "Blue connector"
-msgstr "Modrý konektor"
-
-msgid "Blue front panel connector"
-msgstr "Modrý konektor na předním panelu"
-
-msgid "Orange connector"
-msgstr "Oranžový konektor"
-
-msgid "Orange front panel connector"
-msgstr "Oranžový konektor na předním panelu"
-
-msgid "Black connector"
-msgstr "Černý konektor"
-
-msgid "Black front panel connector"
-msgstr "Černý konektor na předním panelu"
-
-msgid "Gray connector"
-msgstr "Šedý konektor"
-
-msgid "Gray front panel connector"
-msgstr "Šedý konektor na předním panelu"
-
-msgid "White connector"
-msgstr "Bílý konektor"
-
-msgid "White front panel connector"
-msgstr "Bílý konektor na předním panelu"
-
-msgid "Red connector"
-msgstr "Červený konektor"
-
-msgid "Red front panel connector"
-msgstr "Červený konektor na předním panelu"
-
-msgid "Yellow connector"
-msgstr "Žlutý konektor"
-
-msgid "Yellow front panel connector"
-msgstr "Žlutý konektor na předním panelu"
-
-msgid "Green connector function"
-msgstr "Funkce zeleného konektoru"
-
-msgid "Green front panel connector function"
-msgstr "Funkce zeleného konektoru na předním panelu"
-
-msgid "Pink connector function"
-msgstr "Funkce růžového konektoru"
-
-msgid "Pink front panel connector function"
-msgstr "Funkce růžového konektoru na předním panelu"
-
-msgid "Blue connector function"
-msgstr "Funkce modrého konektoru"
-
-msgid "Blue front panel connector function"
-msgstr "Funkce modrého konektoru na předním panelu"
-
-msgid "Orange connector function"
-msgstr "Funkce oranžového konektoru"
-
-msgid "Orange front panel connector function"
-msgstr "Funkce oranžového konektoru na předním panelu"
-
-msgid "Black connector function"
-msgstr "Funkce černého konektoru"
-
-msgid "Black front panel connector function"
-msgstr "Funkce černého konektoru na předním panelu"
-
-msgid "Gray connector function"
-msgstr "Funkce šedého konektoru"
-
-msgid "Gray front panel connector function"
-msgstr "Funkce šedého konektoru na předním panelu"
-
-msgid "White connector function"
-msgstr "Funkce bílého konektoru"
-
-msgid "White front panel connector function"
-msgstr "Funkce bílého konektoru na předním panelu"
-
-msgid "Red connector function"
-msgstr "Funkce červeného konektoru"
-
-msgid "Red front panel connector function"
-msgstr "Funkce červeného konektoru na předním panelu"
-
-msgid "Yellow connector function"
-msgstr "Funkce žlutého konektoru"
-
-msgid "Yellow front panel connector function"
-msgstr "Funkce žlutého konektoru na předním panelu"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Linkový vstup na předním panelu"
 
-msgid "Headphones"
-msgstr "Sluchátka"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Sluchátka na předním panelu"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Linkový vstup na předním panelu"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Zelený konektor"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Růžový konektor"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Modrý konektor"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Bílý konektor"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Černý konektor"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Šedý konektor"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Oranžový konektor"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Červený konektor"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Žlutý konektor"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Zelený konektor na předním panelu"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Růžový konektor na předním panelu"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Modrý konektor na předním panelu"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Bílý konektor na předním panelu"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Černý konektor na předním panelu"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Šedý konektor na předním panelu"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Oranžový konektor na předním panelu"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Červený konektor na předním panelu"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Žlutý konektor na předním panelu"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Vstup virtuálního směšovače"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Výstup virtuálního směšovače"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Konfigurace kanálu virtuálního směšovače"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Vstup virtuálního směšovače"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -320,3 +466,72 @@ msgstr "Chyba při nahrávání ze zvukového zařízení."
 #~ msgstr ""
 #~ "Požadovaná přenosová rychlost %d kbit/s vlastnosti \"%s\" není dovolena. "
 #~ "Přenosová rychlost byla změněna na %d kbit/s."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Funkce zeleného konektoru"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Funkce zeleného konektoru na předním panelu"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Funkce růžového konektoru"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Funkce růžového konektoru na předním panelu"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Funkce modrého konektoru"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Funkce modrého konektoru na předním panelu"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Funkce oranžového konektoru"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Funkce oranžového konektoru na předním panelu"
+
+#~ msgid "Black connector function"
+#~ msgstr "Funkce černého konektoru"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Funkce černého konektoru na předním panelu"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Funkce šedého konektoru"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Funkce šedého konektoru na předním panelu"
+
+#~ msgid "White connector function"
+#~ msgstr "Funkce bílého konektoru"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Funkce bílého konektoru na předním panelu"
+
+#~ msgid "Red connector function"
+#~ msgstr "Funkce červeného konektoru"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Funkce červeného konektoru na předním panelu"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Funkce žlutého konektoru"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Funkce žlutého konektoru na předním panelu"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Konfigurace kanálu virtuálního směšovače"
