--- a/gst-plugins-bad/po/da.po
+++ b/gst-plugins-bad/po/da.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad-0.10.10.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-04-13 11:28+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -72,8 +72,221 @@ msgstr ""
 "Kunne ikke åbne lydenhed til mikserpulthåndtering. Denne version af Open "
 "Sound System er ikke understøttet af dette element."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Hurtig"
+
+msgid "Front"
+msgstr "Front"
+
+# bagende eller eller "Bag" hvis det er den bagerste lydkanal 
+# vi snakker om
+msgid "Rear"
+msgstr "Bag"
+
+msgid "Headphones"
+msgstr "Høretelefoner"
+
+#, fuzzy
+msgid "Center"
+msgstr "Center / LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Surround-lyd"
+
+msgid "Side"
+msgstr "Side"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Høretelefoner"
+
+msgid "Microphone"
+msgstr "Mikrofon"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Linje-ind"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofon"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Inddata"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Stereo"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Surround-lyd"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofon"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofon"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Center / LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Stereo"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Inddata mix"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofon"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofon"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "Tændt"
+
+msgid "Off"
+msgstr "Slukket"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Hurtig"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Lav"
@@ -84,193 +297,126 @@ msgstr "Medium"
 msgid "High"
 msgstr "Højt"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Meget højt"
 
 msgid "Production"
 msgstr "Produktion"
 
-msgid "Off"
-msgstr "Slukket"
-
-msgid "On"
-msgstr "Tændt"
-
-msgid "Stereo"
-msgstr "Stereo"
-
-msgid "Surround sound"
-msgstr "Surround-lyd"
-
-msgid "Input mix"
-msgstr "Inddata mix"
-
-msgid "Front"
-msgstr "Front"
-
-# bagende eller eller "Bag" hvis det er den bagerste lydkanal 
-# vi snakker om
-msgid "Rear"
-msgstr "Bag"
-
-msgid "Side"
-msgstr "Side"
-
-msgid "Center / LFE"
-msgstr "Center / LFE"
-
-msgid "Microphone"
-msgstr "Mikrofon"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Frontpanelmikrofon"
 
-msgid "Input"
-msgstr "Inddata"
-
-msgid "Line-in"
-msgstr "Linje-ind"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Grøn forbindelse"
-
-msgid "Green front panel connector"
-msgstr "Grøn frontpanelforbindelse"
-
-msgid "Pink connector"
-msgstr "Lyserød forbindelse"
-
-msgid "Pink front panel connector"
-msgstr "Lyserød frontpanelforbindelse"
-
-msgid "Blue connector"
-msgstr "Blå forbindelse"
-
-msgid "Blue front panel connector"
-msgstr "Blå frontpanelforbindelse"
-
-msgid "Orange connector"
-msgstr "Orange forbindelse"
-
-msgid "Orange front panel connector"
-msgstr "Orange frontpanelforbindelse"
-
-msgid "Black connector"
-msgstr "Sort forbindelse"
-
-msgid "Black front panel connector"
-msgstr "Sort frontpanelforbindelse"
-
-msgid "Gray connector"
-msgstr "Grå forbindelse"
-
-msgid "Gray front panel connector"
-msgstr "Grå frontpanelforbindelse"
-
-msgid "White connector"
-msgstr "Hvid forbindelse"
-
-msgid "White front panel connector"
-msgstr "Hvid frontpanelforbindelse"
-
-msgid "Red connector"
-msgstr "Rød forbindelse"
-
-msgid "Red front panel connector"
-msgstr "Rød frontpanelforbindelse"
-
-msgid "Yellow connector"
-msgstr "Gul forbindelse"
-
-msgid "Yellow front panel connector"
-msgstr "Gul frontpanelforbindelse"
-
-msgid "Green connector function"
-msgstr "Grøn forbindelsesfunktion"
-
-msgid "Green front panel connector function"
-msgstr "Grøn frontpanelforbindelsesfunktion"
-
-msgid "Pink connector function"
-msgstr "Lyserød forbindelsesfunktion"
-
-msgid "Pink front panel connector function"
-msgstr "Lyserød frontpanelforbindelsesfunktion"
-
-msgid "Blue connector function"
-msgstr "Blå forbindelsesfunktion"
-
-msgid "Blue front panel connector function"
-msgstr "Blå frontpanelforbindelsesfunktion"
-
-msgid "Orange connector function"
-msgstr "Orange forbindelsesfunktion"
-
-msgid "Orange front panel connector function"
-msgstr "Orange frontpanelforbindelsesfunktion"
-
-msgid "Black connector function"
-msgstr "Sort forbindelsesfunktion"
-
-msgid "Black front panel connector function"
-msgstr "Sort frontpanelforbindelsesfunktion"
-
-msgid "Gray connector function"
-msgstr "Grå forbindelsesfunktion"
-
-msgid "Gray front panel connector function"
-msgstr "Grå frontpanelforbindelsesfunktion"
-
-msgid "White connector function"
-msgstr "Hvid forbindelsesfunktion"
-
-msgid "White front panel connector function"
-msgstr "Hvid frontpanelforbindelsesfunktion"
-
-msgid "Red connector function"
-msgstr "Rød forbindelsesfunktion"
-
-msgid "Red front panel connector function"
-msgstr "Rød frontpanelforbindelsesfunktion"
-
-msgid "Yellow connector function"
-msgstr "Gul forbindelsesfunktion"
-
-msgid "Yellow front panel connector function"
-msgstr "Gul frontpanelforbindelsesfunktion"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Frontpanel linje-ind"
 
-msgid "Headphones"
-msgstr "Høretelefoner"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Frontpanel høretelefoner"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Frontpanel linje-ind"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Grøn forbindelse"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Lyserød forbindelse"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Blå forbindelse"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Hvid forbindelse"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Sort forbindelse"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Grå forbindelse"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Orange forbindelse"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Rød forbindelse"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Gul forbindelse"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Grøn frontpanelforbindelse"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Lyserød frontpanelforbindelse"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Blå frontpanelforbindelse"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Hvid frontpanelforbindelse"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Sort frontpanelforbindelse"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Grå frontpanelforbindelse"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Orange frontpanelforbindelse"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Rød frontpanelforbindelse"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Gul frontpanelforbindelse"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Virtuel mikserpultinddata"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Virtuel mikserpultuddata"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Virtuel mikserkanalkonfiguration"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Virtuel mikserpultinddata"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -306,6 +452,75 @@ msgstr "Optagelse er ikke understøttet af denne lydenhed."
 
 msgid "Error recording from audio device."
 msgstr "Fejl under optagelse fra lydenhed."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Grøn forbindelsesfunktion"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Grøn frontpanelforbindelsesfunktion"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Lyserød forbindelsesfunktion"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Lyserød frontpanelforbindelsesfunktion"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Blå forbindelsesfunktion"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Blå frontpanelforbindelsesfunktion"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Orange forbindelsesfunktion"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Orange frontpanelforbindelsesfunktion"
+
+#~ msgid "Black connector function"
+#~ msgstr "Sort forbindelsesfunktion"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Sort frontpanelforbindelsesfunktion"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Grå forbindelsesfunktion"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Grå frontpanelforbindelsesfunktion"
+
+#~ msgid "White connector function"
+#~ msgstr "Hvid forbindelsesfunktion"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Hvid frontpanelforbindelsesfunktion"
+
+#~ msgid "Red connector function"
+#~ msgstr "Rød forbindelsesfunktion"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Rød frontpanelforbindelsesfunktion"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Gul forbindelsesfunktion"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Gul frontpanelforbindelsesfunktion"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Virtuel mikserkanalkonfiguration"
 
 #~ msgid "Failed to configure TwoLAME encoder. Check your encoding parameters."
 #~ msgstr ""
