--- a/gst-plugins-bad/po/fi.po
+++ b/gst-plugins-bad/po/fi.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.10.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-03-11 08:23+0200\n"
 "Last-Translator: Tommi Vainikainen <Tommi.Vainikainen@iki.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
@@ -77,8 +77,219 @@ msgstr ""
 "Äänilaitetta ei voitu avata mikserinhallinnan käsiteltäväksi. Tämä elementti "
 "ei tue tätä versiota Open Sound Systemistä."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Nopea"
+
+msgid "Front"
+msgstr "Etu"
+
+msgid "Rear"
+msgstr "Taka"
+
+msgid "Headphones"
+msgstr "Kuulokkeet"
+
+#, fuzzy
+msgid "Center"
+msgstr "Keski / LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Surround-ääni"
+
+msgid "Side"
+msgstr "Sivu"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Kuulokkeet"
+
+msgid "Microphone"
+msgstr "Mikrofoni"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Linja sisään"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofoni"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Sisääntulo"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Stereo"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Surround-ääni"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofoni"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofoni"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Keski / LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Stereo"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Sisääntulomiksaus"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofoni"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofoni"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "Päällä"
+
+msgid "Off"
+msgstr "Poissa"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Nopea"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Matala"
@@ -89,191 +300,126 @@ msgstr "Keskitaso"
 msgid "High"
 msgstr "Korkea"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Erittäin korkea"
 
 msgid "Production"
 msgstr "Tuotanto"
 
-msgid "Off"
-msgstr "Poissa"
-
-msgid "On"
-msgstr "Päällä"
-
-msgid "Stereo"
-msgstr "Stereo"
-
-msgid "Surround sound"
-msgstr "Surround-ääni"
-
-msgid "Input mix"
-msgstr "Sisääntulomiksaus"
-
-msgid "Front"
-msgstr "Etu"
-
-msgid "Rear"
-msgstr "Taka"
-
-msgid "Side"
-msgstr "Sivu"
-
-msgid "Center / LFE"
-msgstr "Keski / LFE"
-
-msgid "Microphone"
-msgstr "Mikrofoni"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Etupaneelin mikrofoni"
 
-msgid "Input"
-msgstr "Sisääntulo"
-
-msgid "Line-in"
-msgstr "Linja sisään"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Vihreä liitin"
-
-msgid "Green front panel connector"
-msgstr "Vihreä etupaneelin liitin"
-
-msgid "Pink connector"
-msgstr "Violetti liitin"
-
-msgid "Pink front panel connector"
-msgstr "Violetti etupaneelin liitin"
-
-msgid "Blue connector"
-msgstr "Sininen liitin"
-
-msgid "Blue front panel connector"
-msgstr "Sininen etupaneelin liitin"
-
-msgid "Orange connector"
-msgstr "Oranssi liitin"
-
-msgid "Orange front panel connector"
-msgstr "Oranssi etupaneelin liitin"
-
-msgid "Black connector"
-msgstr "Musta liitin"
-
-msgid "Black front panel connector"
-msgstr "Musta etupaneelin liitin"
-
-msgid "Gray connector"
-msgstr "Harmaa liitin"
-
-msgid "Gray front panel connector"
-msgstr "Harmaa etupaneelin liitin"
-
-msgid "White connector"
-msgstr "Valkoinen liitin"
-
-msgid "White front panel connector"
-msgstr "Valkoinen etupaneelin liitin"
-
-msgid "Red connector"
-msgstr "Punainen liitin"
-
-msgid "Red front panel connector"
-msgstr "Punainen etupaneelin liitin"
-
-msgid "Yellow connector"
-msgstr "Keltainen liitin"
-
-msgid "Yellow front panel connector"
-msgstr "Keltainen etupaneelin liitin"
-
-msgid "Green connector function"
-msgstr "Vihreän liittimen toiminto"
-
-msgid "Green front panel connector function"
-msgstr "Vihreän etupaneelin liittimen toiminto"
-
-msgid "Pink connector function"
-msgstr "Violetin liittimen toiminto"
-
-msgid "Pink front panel connector function"
-msgstr "Violetin etupaneelin liittimen toiminto"
-
-msgid "Blue connector function"
-msgstr "Sinisen liittimen toiminto"
-
-msgid "Blue front panel connector function"
-msgstr "Sinisen etupaneelin liittimen toiminto"
-
-msgid "Orange connector function"
-msgstr "Oranssin liittimen toiminto"
-
-msgid "Orange front panel connector function"
-msgstr "Oranssin etupaneelin liittimen toiminto"
-
-msgid "Black connector function"
-msgstr "Mustan liittimen toiminto"
-
-msgid "Black front panel connector function"
-msgstr "Mustan etupaneelin liittimen toiminto"
-
-msgid "Gray connector function"
-msgstr "Harmaan liittimen toiminto"
-
-msgid "Gray front panel connector function"
-msgstr "Harmaan etupaneelin liittimen toiminto"
-
-msgid "White connector function"
-msgstr "Valkoisen liittimen toiminto"
-
-msgid "White front panel connector function"
-msgstr "Valkoisen etupaneelin liittimen toiminto"
-
-msgid "Red connector function"
-msgstr "Punaisen liittimen toiminto"
-
-msgid "Red front panel connector function"
-msgstr "Punaisen etupaneelin liittimen toiminto"
-
-msgid "Yellow connector function"
-msgstr "Keltaisen liittimen toiminto"
-
-msgid "Yellow front panel connector function"
-msgstr "Keltaisen etupaneelin liittimen toiminto"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Etupaneelin linjasisääntulo"
 
-msgid "Headphones"
-msgstr "Kuulokkeet"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Etupaneelin kuulokkeet"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Etupaneelin linjasisääntulo"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Vihreä liitin"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Violetti liitin"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Sininen liitin"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Valkoinen liitin"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Musta liitin"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Harmaa liitin"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Oranssi liitin"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Punainen liitin"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Keltainen liitin"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Vihreä etupaneelin liitin"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Violetti etupaneelin liitin"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Sininen etupaneelin liitin"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Valkoinen etupaneelin liitin"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Musta etupaneelin liitin"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Harmaa etupaneelin liitin"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Oranssi etupaneelin liitin"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Punainen etupaneelin liitin"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Keltainen etupaneelin liitin"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Näennäinen mikserisisääntulo"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Näennäinen mikseriulostulo"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Näennäinen mikserikanava-asetus"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Näennäinen mikserisisääntulo"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -310,3 +456,72 @@ msgstr "Tämä äänilaite ei tue nauhoitusta."
 
 msgid "Error recording from audio device."
 msgstr "Virhe nauhoitettaessa äänilaitteelta."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Vihreän liittimen toiminto"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Vihreän etupaneelin liittimen toiminto"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Violetin liittimen toiminto"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Violetin etupaneelin liittimen toiminto"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Sinisen liittimen toiminto"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Sinisen etupaneelin liittimen toiminto"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Oranssin liittimen toiminto"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Oranssin etupaneelin liittimen toiminto"
+
+#~ msgid "Black connector function"
+#~ msgstr "Mustan liittimen toiminto"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Mustan etupaneelin liittimen toiminto"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Harmaan liittimen toiminto"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Harmaan etupaneelin liittimen toiminto"
+
+#~ msgid "White connector function"
+#~ msgstr "Valkoisen liittimen toiminto"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Valkoisen etupaneelin liittimen toiminto"
+
+#~ msgid "Red connector function"
+#~ msgstr "Punaisen liittimen toiminto"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Punaisen etupaneelin liittimen toiminto"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Keltaisen liittimen toiminto"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Keltaisen etupaneelin liittimen toiminto"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Näennäinen mikserikanava-asetus"
