--- a/gst-plugins-bad/po/fr.po
+++ b/gst-plugins-bad/po/fr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.8.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2008-10-21 09:59+0200\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -75,8 +75,219 @@ msgstr ""
 "mixage. Cette version de OSS (Open Sound System) n'est pas prise en charge "
 "par cet élément."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Rapide"
+
+msgid "Front"
+msgstr "Avant"
+
+msgid "Rear"
+msgstr "Arrière"
+
+msgid "Headphones"
+msgstr "Écouteurs"
+
+#, fuzzy
+msgid "Center"
+msgstr "Centre / LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Son ambiophonique"
+
+msgid "Side"
+msgstr "Côté"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Écouteurs"
+
+msgid "Microphone"
+msgstr "Microphone"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Entrée ligne"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Microphone"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Entrée"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Stéréo"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Son ambiophonique"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Microphone"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Microphone"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Centre / LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Stéréo"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Mélangeur d'entrée"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Microphone"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Microphone"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "Activé"
+
+msgid "Off"
+msgstr "Désactivé"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Rapide"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Bas"
@@ -87,191 +298,126 @@ msgstr "Moyen"
 msgid "High"
 msgstr "Élevé"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Très élevé"
 
 msgid "Production"
 msgstr "Production"
 
-msgid "Off"
-msgstr "Désactivé"
-
-msgid "On"
-msgstr "Activé"
-
-msgid "Stereo"
-msgstr "Stéréo"
-
-msgid "Surround sound"
-msgstr "Son ambiophonique"
-
-msgid "Input mix"
-msgstr "Mélangeur d'entrée"
-
-msgid "Front"
-msgstr "Avant"
-
-msgid "Rear"
-msgstr "Arrière"
-
-msgid "Side"
-msgstr "Côté"
-
-msgid "Center / LFE"
-msgstr "Centre / LFE"
-
-msgid "Microphone"
-msgstr "Microphone"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Micro du panneau avant"
 
-msgid "Input"
-msgstr "Entrée"
-
-msgid "Line-in"
-msgstr "Entrée ligne"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Connecteur vert"
-
-msgid "Green front panel connector"
-msgstr "Connecteur vert du panneau avant"
-
-msgid "Pink connector"
-msgstr "Connecteur rose"
-
-msgid "Pink front panel connector"
-msgstr "Connecteur rose du panneau avant"
-
-msgid "Blue connector"
-msgstr "Connecteur bleu"
-
-msgid "Blue front panel connector"
-msgstr "Connecteur bleu du panneau avant"
-
-msgid "Orange connector"
-msgstr "Connecteur orange"
-
-msgid "Orange front panel connector"
-msgstr "Connecteur orange du panneau avant"
-
-msgid "Black connector"
-msgstr "Connecteur noir"
-
-msgid "Black front panel connector"
-msgstr "Connecteur noir du panneau avant"
-
-msgid "Gray connector"
-msgstr "Connecteur gris"
-
-msgid "Gray front panel connector"
-msgstr "Connecteur gris du panneau avant"
-
-msgid "White connector"
-msgstr "Connecteur blanc"
-
-msgid "White front panel connector"
-msgstr "Connecteur blanc du panneau avant"
-
-msgid "Red connector"
-msgstr "Connecteur rouge"
-
-msgid "Red front panel connector"
-msgstr "Connecteur rouge du panneau avant"
-
-msgid "Yellow connector"
-msgstr "Connecteur jaune"
-
-msgid "Yellow front panel connector"
-msgstr "Connecteur jaune du panneau avant"
-
-msgid "Green connector function"
-msgstr "Fonction du connecteur vert"
-
-msgid "Green front panel connector function"
-msgstr "Fonction du connecteur vert du panneau avant"
-
-msgid "Pink connector function"
-msgstr "Fonction du connecteur rose"
-
-msgid "Pink front panel connector function"
-msgstr "Fonction du connecteur rose du panneau avant"
-
-msgid "Blue connector function"
-msgstr "Fonction du connecteur bleu"
-
-msgid "Blue front panel connector function"
-msgstr "Fonction du connecteur bleu du panneau avant"
-
-msgid "Orange connector function"
-msgstr "Fonction du connecteur orange"
-
-msgid "Orange front panel connector function"
-msgstr "Fonction du connecteur orange du panneau avant"
-
-msgid "Black connector function"
-msgstr "Fonction du connecteur noir"
-
-msgid "Black front panel connector function"
-msgstr "Fonction du connecteur noir du panneau avant"
-
-msgid "Gray connector function"
-msgstr "Fonction du connecteur gris"
-
-msgid "Gray front panel connector function"
-msgstr "Fonction du connecteur gris du panneau avant"
-
-msgid "White connector function"
-msgstr "Fonction du connecteur blanc"
-
-msgid "White front panel connector function"
-msgstr "Fonction du connecteur blanc du panneau avant"
-
-msgid "Red connector function"
-msgstr "Fonction du connecteur rouge"
-
-msgid "Red front panel connector function"
-msgstr "Fonction du connecteur rouge du panneau avant"
-
-msgid "Yellow connector function"
-msgstr "Fonction du connecteur jaune"
-
-msgid "Yellow front panel connector function"
-msgstr "Fonction du connecteur jaune du panneau avant"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Entrée ligne du panneau avant"
 
-msgid "Headphones"
-msgstr "Écouteurs"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Écouteurs du panneau avant"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Entrée ligne du panneau avant"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Connecteur vert"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Connecteur rose"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Connecteur bleu"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Connecteur blanc"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Connecteur noir"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Connecteur gris"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Connecteur orange"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Connecteur rouge"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Connecteur jaune"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Connecteur vert du panneau avant"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Connecteur rose du panneau avant"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Connecteur bleu du panneau avant"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Connecteur blanc du panneau avant"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Connecteur noir du panneau avant"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Connecteur gris du panneau avant"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Connecteur orange du panneau avant"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Connecteur rouge du panneau avant"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Connecteur jaune du panneau avant"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Entrée de mélangeur virtuel"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Sortie de mélangeur virtuel"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Configuration du canal du mélangeur virtuel"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Entrée de mélangeur virtuel"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -320,3 +466,72 @@ msgstr "Erreur lors de l'enregistrement à partir du périphérique audio."
 #~ msgstr ""
 #~ "Le débit binaire demandé de %d kbit/s pour la propriété « %s » n'est pas "
 #~ "autorisé. Le débit binaire a été défini à %d kbits/s."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Fonction du connecteur vert"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Fonction du connecteur vert du panneau avant"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Fonction du connecteur rose"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Fonction du connecteur rose du panneau avant"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Fonction du connecteur bleu"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Fonction du connecteur bleu du panneau avant"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Fonction du connecteur orange"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Fonction du connecteur orange du panneau avant"
+
+#~ msgid "Black connector function"
+#~ msgstr "Fonction du connecteur noir"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Fonction du connecteur noir du panneau avant"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Fonction du connecteur gris"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Fonction du connecteur gris du panneau avant"
+
+#~ msgid "White connector function"
+#~ msgstr "Fonction du connecteur blanc"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Fonction du connecteur blanc du panneau avant"
+
+#~ msgid "Red connector function"
+#~ msgstr "Fonction du connecteur rouge"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Fonction du connecteur rouge du panneau avant"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Fonction du connecteur jaune"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Fonction du connecteur jaune du panneau avant"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Configuration du canal du mélangeur virtuel"
