--- a/gst-plugins-bad/po/hu.po
+++ b/gst-plugins-bad/po/hu.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.10.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-04-20 02:16+0200\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
@@ -72,8 +72,219 @@ msgstr ""
 "A hangeszköz nem nyitható meg a keverő vezérlőinek kezeléséhez. A Nyílt "
 "hangrendszer ezen verzióját nem támogatja az elem."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Gyors"
+
+msgid "Front"
+msgstr "Elöl"
+
+msgid "Rear"
+msgstr "Hátul"
+
+msgid "Headphones"
+msgstr "Fülhallgatók"
+
+#, fuzzy
+msgid "Center"
+msgstr "Közép/LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Térhatású hang"
+
+msgid "Side"
+msgstr "Oldalt"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Fülhallgatók"
+
+msgid "Microphone"
+msgstr "Mikrofon"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Vonalbemenet"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofon"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Bemenet"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Sztereó"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Térhatású hang"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofon"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofon"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Közép/LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Sztereó"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Bemeneti keverő"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofon"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofon"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "Be"
+
+msgid "Off"
+msgstr "Ki"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Gyors"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Alacsony"
@@ -84,191 +295,126 @@ msgstr "Közepes"
 msgid "High"
 msgstr "Magas"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Nagyon magas"
 
 msgid "Production"
 msgstr "Előállítás"
 
-msgid "Off"
-msgstr "Ki"
-
-msgid "On"
-msgstr "Be"
-
-msgid "Stereo"
-msgstr "Sztereó"
-
-msgid "Surround sound"
-msgstr "Térhatású hang"
-
-msgid "Input mix"
-msgstr "Bemeneti keverő"
-
-msgid "Front"
-msgstr "Elöl"
-
-msgid "Rear"
-msgstr "Hátul"
-
-msgid "Side"
-msgstr "Oldalt"
-
-msgid "Center / LFE"
-msgstr "Közép/LFE"
-
-msgid "Microphone"
-msgstr "Mikrofon"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Előlapi mikrofon"
 
-msgid "Input"
-msgstr "Bemenet"
-
-msgid "Line-in"
-msgstr "Vonalbemenet"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Zöld csatlakozó"
-
-msgid "Green front panel connector"
-msgstr "Zöld előlapi csatlakozó"
-
-msgid "Pink connector"
-msgstr "Rózsaszín csatlakozó"
-
-msgid "Pink front panel connector"
-msgstr "Rózsaszín előlapi csatlakozó"
-
-msgid "Blue connector"
-msgstr "Kék csatlakozó"
-
-msgid "Blue front panel connector"
-msgstr "Kék előlapi csatlakozó"
-
-msgid "Orange connector"
-msgstr "Narancs csatlakozó"
-
-msgid "Orange front panel connector"
-msgstr "Narancs előlapi csatlakozó"
-
-msgid "Black connector"
-msgstr "Fekete csatlakozó"
-
-msgid "Black front panel connector"
-msgstr "Fekete előlapi csatlakozó"
-
-msgid "Gray connector"
-msgstr "Szürke csatlakozó"
-
-msgid "Gray front panel connector"
-msgstr "Szürke előlapi csatlakozó"
-
-msgid "White connector"
-msgstr "Fehér csatlakozó"
-
-msgid "White front panel connector"
-msgstr "Fehér előlapi csatlakozó"
-
-msgid "Red connector"
-msgstr "Vörös csatlakozó"
-
-msgid "Red front panel connector"
-msgstr "Vörös előlapi csatlakozó"
-
-msgid "Yellow connector"
-msgstr "Sárga csatlakozó"
-
-msgid "Yellow front panel connector"
-msgstr "Sárga előlapi csatlakozó"
-
-msgid "Green connector function"
-msgstr "Zöld csatlakozó funkciója"
-
-msgid "Green front panel connector function"
-msgstr "Zöld előlapi csatlakozó funkciója"
-
-msgid "Pink connector function"
-msgstr "Rózsaszín csatlakozó funkciója"
-
-msgid "Pink front panel connector function"
-msgstr "Rózsaszín előlapi csatlakozó funkciója"
-
-msgid "Blue connector function"
-msgstr "Kék csatlakozó funkciója"
-
-msgid "Blue front panel connector function"
-msgstr "Kék előlapi csatlakozó funkciója"
-
-msgid "Orange connector function"
-msgstr "Narancs csatlakozó funkciója"
-
-msgid "Orange front panel connector function"
-msgstr "Narancs előlapi csatlakozó funkciója"
-
-msgid "Black connector function"
-msgstr "Fekete csatlakozó funkciója"
-
-msgid "Black front panel connector function"
-msgstr "Fekete előlapi csatlakozó funkciója"
-
-msgid "Gray connector function"
-msgstr "Szürke csatlakozó funkciója"
-
-msgid "Gray front panel connector function"
-msgstr "Szürke előlapi csatlakozó funkciója"
-
-msgid "White connector function"
-msgstr "Fehér csatlakozó funkciója"
-
-msgid "White front panel connector function"
-msgstr "Fehér előlapi csatlakozó funkciója"
-
-msgid "Red connector function"
-msgstr "Vörös csatlakozó funkciója"
-
-msgid "Red front panel connector function"
-msgstr "Vörös előlapi csatlakozó funkciója"
-
-msgid "Yellow connector function"
-msgstr "Sárga csatlakozó funkciója"
-
-msgid "Yellow front panel connector function"
-msgstr "Sárga előlapi csatlakozó funkciója"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Előlapi vonalbemenet"
 
-msgid "Headphones"
-msgstr "Fülhallgatók"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Előlapi fülhallgató"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Előlapi vonalbemenet"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Zöld csatlakozó"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Rózsaszín csatlakozó"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Kék csatlakozó"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Fehér csatlakozó"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Fekete csatlakozó"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Szürke csatlakozó"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Narancs csatlakozó"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Vörös csatlakozó"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Sárga csatlakozó"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Zöld előlapi csatlakozó"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Rózsaszín előlapi csatlakozó"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Kék előlapi csatlakozó"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Fehér előlapi csatlakozó"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Fekete előlapi csatlakozó"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Szürke előlapi csatlakozó"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Narancs előlapi csatlakozó"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Vörös előlapi csatlakozó"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Sárga előlapi csatlakozó"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Virtuális keverőbemenet"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Virtuális keverőkimenet"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Virtuális keverő csatornabeállításai"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Virtuális keverőbemenet"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -305,3 +451,72 @@ msgstr "A hangeszköz nem támogatja a felvételt."
 
 msgid "Error recording from audio device."
 msgstr "Hiba a hangeszközről való felvételkor."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Zöld csatlakozó funkciója"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Zöld előlapi csatlakozó funkciója"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Rózsaszín csatlakozó funkciója"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Rózsaszín előlapi csatlakozó funkciója"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Kék csatlakozó funkciója"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Kék előlapi csatlakozó funkciója"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Narancs csatlakozó funkciója"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Narancs előlapi csatlakozó funkciója"
+
+#~ msgid "Black connector function"
+#~ msgstr "Fekete csatlakozó funkciója"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Fekete előlapi csatlakozó funkciója"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Szürke csatlakozó funkciója"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Szürke előlapi csatlakozó funkciója"
+
+#~ msgid "White connector function"
+#~ msgstr "Fehér csatlakozó funkciója"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Fehér előlapi csatlakozó funkciója"
+
+#~ msgid "Red connector function"
+#~ msgstr "Vörös csatlakozó funkciója"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Vörös előlapi csatlakozó funkciója"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Sárga csatlakozó funkciója"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Sárga előlapi csatlakozó funkciója"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Virtuális keverő csatornabeállításai"
