--- a/gst-plugins-bad/po/id.po
+++ b/gst-plugins-bad/po/id.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.12.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-06-13 22:03+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
@@ -70,8 +70,219 @@ msgstr ""
 "Tak dapat membuka divais audio untuk pengendalian kontrol mixer. Versi Open "
 "Sound System ini tak didukung oleh elemen ini."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Cepat"
+
+msgid "Front"
+msgstr "Depan"
+
+msgid "Rear"
+msgstr "Belakang"
+
+msgid "Headphones"
+msgstr "Headphone"
+
+#, fuzzy
+msgid "Center"
+msgstr "Tengah / LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Surround sound"
+
+msgid "Side"
+msgstr "Samping"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Headphone"
+
+msgid "Microphone"
+msgstr "Mikrofon"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Jalur-masuk"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofon"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Masukan"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Stereo"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Surround sound"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofon"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofon"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Tengah / LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Stereo"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Mix masukan"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofon"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofon"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "Hidup"
+
+msgid "Off"
+msgstr "Mati"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Cepat"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Rendah"
@@ -82,191 +293,126 @@ msgstr "Sedang"
 msgid "High"
 msgstr "Tinggi"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Sangat tinggi"
 
 msgid "Production"
 msgstr "Produksi"
 
-msgid "Off"
-msgstr "Mati"
-
-msgid "On"
-msgstr "Hidup"
-
-msgid "Stereo"
-msgstr "Stereo"
-
-msgid "Surround sound"
-msgstr "Surround sound"
-
-msgid "Input mix"
-msgstr "Mix masukan"
-
-msgid "Front"
-msgstr "Depan"
-
-msgid "Rear"
-msgstr "Belakang"
-
-msgid "Side"
-msgstr "Samping"
-
-msgid "Center / LFE"
-msgstr "Tengah / LFE"
-
-msgid "Microphone"
-msgstr "Mikrofon"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Mikrofon panel depan"
 
-msgid "Input"
-msgstr "Masukan"
-
-msgid "Line-in"
-msgstr "Jalur-masuk"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Penyambung hijau"
-
-msgid "Green front panel connector"
-msgstr "Penyambung panel depan hijau"
-
-msgid "Pink connector"
-msgstr "Penyambung merah jambu"
-
-msgid "Pink front panel connector"
-msgstr "Penyambung panel depan merah jambu"
-
-msgid "Blue connector"
-msgstr "Penyambung biru"
-
-msgid "Blue front panel connector"
-msgstr "Penyambung panel depan biru"
-
-msgid "Orange connector"
-msgstr "Penyambung jingga"
-
-msgid "Orange front panel connector"
-msgstr "Penyambung panel depan jingga"
-
-msgid "Black connector"
-msgstr "Penyambung hitam"
-
-msgid "Black front panel connector"
-msgstr "Penyambung panel depan hitam"
-
-msgid "Gray connector"
-msgstr "Penyambung abu-abu"
-
-msgid "Gray front panel connector"
-msgstr "Penyambung panel depan abu-abu"
-
-msgid "White connector"
-msgstr "Penyambung putih"
-
-msgid "White front panel connector"
-msgstr "Penyambung panel depan putih"
-
-msgid "Red connector"
-msgstr "Penyambung merah"
-
-msgid "Red front panel connector"
-msgstr "Penyambung panel depan merah"
-
-msgid "Yellow connector"
-msgstr "Penyambung kuning"
-
-msgid "Yellow front panel connector"
-msgstr "Penyambung panel depan kuning"
-
-msgid "Green connector function"
-msgstr "Fungsi penyambung hijau"
-
-msgid "Green front panel connector function"
-msgstr "Fungsi penyambung panel depan hijau"
-
-msgid "Pink connector function"
-msgstr "Fungsi penyambung merah jambu"
-
-msgid "Pink front panel connector function"
-msgstr "Fungsi penyambung panel depan merah jambu"
-
-msgid "Blue connector function"
-msgstr "Fungsi penyambung biru"
-
-msgid "Blue front panel connector function"
-msgstr "Fungsi penyambung panel depan biru"
-
-msgid "Orange connector function"
-msgstr "Fungsi penyambung jingga"
-
-msgid "Orange front panel connector function"
-msgstr "Fungsi penyambung panel depan jingga"
-
-msgid "Black connector function"
-msgstr "Fungsi penyambung hitam"
-
-msgid "Black front panel connector function"
-msgstr "Fungsi penyambung panel depan hitam"
-
-msgid "Gray connector function"
-msgstr "Fungsi penyambung abu-abu"
-
-msgid "Gray front panel connector function"
-msgstr "Fungsi penyambung panel depan abu-abu"
-
-msgid "White connector function"
-msgstr "Fungsi penyambung putih"
-
-msgid "White front panel connector function"
-msgstr "Fungsi penyambung panel depan putih"
-
-msgid "Red connector function"
-msgstr "Fungsi penyambung merah"
-
-msgid "Red front panel connector function"
-msgstr "Fungsi penyambung panel depan merah"
-
-msgid "Yellow connector function"
-msgstr "Fungsi penyambung kuning"
-
-msgid "Yellow front panel connector function"
-msgstr "Fungsi penyambung panel depan kuning"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Jalur-masuk panel depan"
 
-msgid "Headphones"
-msgstr "Headphone"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Headphone panel depan"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Jalur-masuk panel depan"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Penyambung hijau"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Penyambung merah jambu"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Penyambung biru"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Penyambung putih"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Penyambung hitam"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Penyambung abu-abu"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Penyambung jingga"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Penyambung merah"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Penyambung kuning"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Penyambung panel depan hijau"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Penyambung panel depan merah jambu"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Penyambung panel depan biru"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Penyambung panel depan putih"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Penyambung panel depan hitam"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Penyambung panel depan abu-abu"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Penyambung panel depan jingga"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Penyambung panel depan merah"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Penyambung panel depan kuning"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Masukan mixer virtual"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Keluaran mixer virtual"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Konfigurasi kanal mixer virtual"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Masukan mixer virtual"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -303,6 +449,75 @@ msgstr "Perekaman tak didukung oleh divais audio ini."
 
 msgid "Error recording from audio device."
 msgstr "Galat ketika merekam dari divais audio."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Fungsi penyambung hijau"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan hijau"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Fungsi penyambung merah jambu"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan merah jambu"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Fungsi penyambung biru"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan biru"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Fungsi penyambung jingga"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan jingga"
+
+#~ msgid "Black connector function"
+#~ msgstr "Fungsi penyambung hitam"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan hitam"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Fungsi penyambung abu-abu"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan abu-abu"
+
+#~ msgid "White connector function"
+#~ msgstr "Fungsi penyambung putih"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan putih"
+
+#~ msgid "Red connector function"
+#~ msgstr "Fungsi penyambung merah"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan merah"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Fungsi penyambung kuning"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Fungsi penyambung panel depan kuning"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Konfigurasi kanal mixer virtual"
 
 #~ msgid "Failed to configure TwoLAME encoder. Check your encoding parameters."
 #~ msgstr "Gagal mengatur penyandi TwoLAME. Cek parameter penyandian anda."
