--- a/gst-plugins-bad/po/ja.po
+++ b/gst-plugins-bad/po/ja.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.11.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-06-01 20:27+0900\n"
 "Last-Translator: Makoto Kato <makoto.kt@gmail.com>\n"
 "Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
@@ -70,7 +70,217 @@ msgid ""
 "Open Sound System is not supported by this element."
 msgstr ""
 
+msgid "Volume"
+msgstr ""
+
+msgid "Master"
+msgstr ""
+
+msgid "Front"
+msgstr "フロント"
+
+msgid "Rear"
+msgstr "リア"
+
+msgid "Headphones"
+msgstr "ヘッドフォン"
+
+#, fuzzy
+msgid "Center"
+msgstr "センター / LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "サラウンドサウンド"
+
+msgid "Side"
+msgstr "サイド"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "ヘッドフォン"
+
+msgid "Microphone"
+msgstr "マイクロフォン"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "ライン入力"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "マイクロフォン"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "入力"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "ステレオ"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "サラウンドサウンド"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "マイクロフォン"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "マイクロフォン"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "センター / LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "ステレオ"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "入力ミックス"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "マイクロフォン"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "マイクロフォン"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "On"
+
+msgid "Off"
+msgstr "Off"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
+msgstr ""
+
+msgid "Very Low"
 msgstr ""
 
 msgid "Low"
@@ -82,191 +292,126 @@ msgstr "中音"
 msgid "High"
 msgstr "高音"
 
-msgid "Very high"
-msgstr ""
+#, fuzzy
+msgid "Very High"
+msgstr "高音"
 
 msgid "Production"
 msgstr "プロダクション"
 
-msgid "Off"
-msgstr "Off"
-
-msgid "On"
-msgstr "On"
-
-msgid "Stereo"
-msgstr "ステレオ"
-
-msgid "Surround sound"
-msgstr "サラウンドサウンド"
-
-msgid "Input mix"
-msgstr "入力ミックス"
-
-msgid "Front"
-msgstr "フロント"
-
-msgid "Rear"
-msgstr "リア"
-
-msgid "Side"
-msgstr "サイド"
-
-msgid "Center / LFE"
-msgstr "センター / LFE"
-
-msgid "Microphone"
-msgstr "マイクロフォン"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "フロントパネルのマイクロフォン"
 
-msgid "Input"
-msgstr "入力"
-
-msgid "Line-in"
-msgstr "ライン入力"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "緑色コネクタ"
-
-msgid "Green front panel connector"
-msgstr "緑色のフロントパネルのコネクタ"
-
-msgid "Pink connector"
-msgstr "ピンク色コネクタ"
-
-msgid "Pink front panel connector"
-msgstr "ピンク色のフロントパネルコネクタ"
-
-msgid "Blue connector"
-msgstr "青色コネクタ"
-
-msgid "Blue front panel connector"
-msgstr ""
-
-msgid "Orange connector"
-msgstr "オレンジ色コネクタ"
-
-msgid "Orange front panel connector"
-msgstr ""
-
-msgid "Black connector"
-msgstr "黒色コネクタ"
-
-msgid "Black front panel connector"
-msgstr ""
-
-msgid "Gray connector"
-msgstr "グレー色コネクタ"
-
-msgid "Gray front panel connector"
-msgstr ""
-
-msgid "White connector"
-msgstr "白色コネクタ"
-
-msgid "White front panel connector"
-msgstr ""
-
-msgid "Red connector"
-msgstr "赤色コネクタ"
-
-msgid "Red front panel connector"
-msgstr ""
-
-msgid "Yellow connector"
-msgstr "黄色コネクタ"
-
-msgid "Yellow front panel connector"
-msgstr ""
-
-msgid "Green connector function"
-msgstr "緑色コネクタ機能"
-
-msgid "Green front panel connector function"
-msgstr ""
-
-msgid "Pink connector function"
-msgstr ""
-
-msgid "Pink front panel connector function"
-msgstr ""
-
-msgid "Blue connector function"
-msgstr ""
-
-msgid "Blue front panel connector function"
-msgstr ""
-
-msgid "Orange connector function"
-msgstr ""
-
-msgid "Orange front panel connector function"
-msgstr ""
-
-msgid "Black connector function"
-msgstr ""
-
-msgid "Black front panel connector function"
-msgstr ""
-
-msgid "Gray connector function"
-msgstr ""
-
-msgid "Gray front panel connector function"
-msgstr ""
-
-msgid "White connector function"
-msgstr ""
-
-msgid "White front panel connector function"
-msgstr ""
-
-msgid "Red connector function"
-msgstr ""
-
-msgid "Red front panel connector function"
-msgstr ""
-
-msgid "Yellow connector function"
-msgstr ""
-
-msgid "Yellow front panel connector function"
-msgstr ""
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "プロントパネルのライン入力"
 
-msgid "Headphones"
-msgstr "ヘッドフォン"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "フロントパネルのヘッドフォン"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "プロントパネルのライン入力"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "緑色コネクタ"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "ピンク色コネクタ"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "青色コネクタ"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "白色コネクタ"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "黒色コネクタ"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "グレー色コネクタ"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "オレンジ色コネクタ"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "赤色コネクタ"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "黄色コネクタ"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "緑色のフロントパネルのコネクタ"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "ピンク色のフロントパネルコネクタ"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "緑色のフロントパネルのコネクタ"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "ピンク色のフロントパネルコネクタ"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "ピンク色のフロントパネルコネクタ"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "緑色のフロントパネルのコネクタ"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "緑色のフロントパネルのコネクタ"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "緑色のフロントパネルのコネクタ"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "緑色のフロントパネルのコネクタ"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "仮想ミキサー入力"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "仮想ミキサー出力"
 
-msgid "Virtual mixer channel configuration"
-msgstr "仮想ミックスチャンネル設定"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "仮想ミキサー入力"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -303,6 +448,24 @@ msgstr "録音はこのオーディオデバイスによってサポートされ
 
 msgid "Error recording from audio device."
 msgstr "オーディオデバイスからの録音時にエラーが発生しました。"
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "緑色コネクタ機能"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "仮想ミックスチャンネル設定"
 
 #~ msgid "Failed to configure TwoLAME encoder. Check your encoding parameters."
 #~ msgstr ""
