--- a/gst-plugins-bad/po/lv.po
+++ b/gst-plugins-bad/po/lv.po
@@ -1,109 +1,108 @@
-# translation of gst-plugins-bad-0.10.10.2.po to Español
-# spanish translation for gst-plugins-bad
+# Latvian translation of gst-plugins-bad
 # This file is put in the public domain.
+# Arvis Lācis <arvis.lacis@inbox.lv>, 2009.
 #
-# Jorge González González <aloriel@gmail.com>, 2007, 20, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-bad 0.10.10.2\n"
+"Project-Id-Version: gst-plugins-bad 0.10.12.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
 "POT-Creation-Date: 2009-08-11 17:42+0100\n"
-"PO-Revision-Date: 2009-04-04 13:31+0200\n"
-"Last-Translator: Jorge González González <aloriel@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"PO-Revision-Date: 2009-07-30 11:40+0100\n"
+"Last-Translator: Rihards Priedītis <rprieditis@gmail.com>\n"
+"Language-Team: Latvian <translation-team-lv@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Language: Latvian\n"
+"X-Poedit-Country: LATVIA\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : "
+"2);\n"
 
 msgid "Could not read title information for DVD."
-msgstr "No se pudo leer la información del título para el DVD."
+msgstr "Nevarēja nolasīt virsrakstu informāciju no DVD."
 
 #, c-format
 msgid "Failed to open DVD device '%s'."
-msgstr "Falló abrir el dispositivo DVD «%s»."
+msgstr "Neizdevās atvērt DVD ierīci '%s'."
 
 msgid "Failed to set PGC based seeking."
-msgstr "Falló al establecer la búsqueda basada en PGC."
+msgstr "Neizdevās uzstādīt PCG balstīto meklēšanu."
 
 msgid "Internal clock error."
-msgstr "Error en el reloj interno."
+msgstr "Iekšējā pulksteņa kļūda."
 
 msgid "Internal data flow error."
-msgstr "Error en el flujo de datos interno."
+msgstr "Iekšējā datu plūsmas kļūda."
 
 msgid "No file name specified for writing."
-msgstr "No se especificó un nombre de archivo para su escritura."
+msgstr "Ierakstīšanai nav norādīts neviens faila nosaukums."
 
 #, c-format
 msgid "Could not open file \"%s\" for writing."
-msgstr "No se pudo abrir el archivo «%s» para escribir."
+msgstr "Nav iespējams atvērt failu \"%s\" ierakstīšanai."
 
 msgid "Internal data stream error."
-msgstr "Error en el flujo de datos interno."
+msgstr "Iekšējās datu plūsmas kļūda."
 
 #, c-format
 msgid "Could not write to file \"%s\"."
-msgstr "No se pudo escribir en el archivo «%s»."
+msgstr "Nevarēja ierakstīt failā \"%s\"."
 
 #, c-format
 msgid "Device \"%s\" does not exist."
-msgstr "El dispositivo «%s» no existe."
+msgstr "Ierīce \"%s\" neeksistē."
 
 #, c-format
 msgid "Could not open frontend device \"%s\"."
-msgstr "No se pudo abrir el dispositivo frontend «%s»."
+msgstr "Nav iespējams atvērt priekšējo ierīci \"%s\"."
 
 #, c-format
 msgid "Could not get settings from frontend device \"%s\"."
-msgstr "No se pudieron obtener los ajustes del dispositivo frontend «%s»."
+msgstr "Nav iespējams iegūt uzstādījumus no priekšējās ierīces  \"%s\"."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
-msgstr "No se pudo abrir el archivo «%s» para leer."
+msgstr "Nav iespējams atvērt failu \"%s\" lasīšanai."
 
 msgid "Could not open audio device for mixer control handling."
-msgstr ""
-"No se pudo abrir el dispositivo de sonido para manejar el control del "
-"mezclador."
+msgstr "Nav iespējams atvērt audio ierīci jaucēja kontroles vadīšanai."
 
 msgid ""
 "Could not open audio device for mixer control handling. This version of the "
 "Open Sound System is not supported by this element."
 msgstr ""
-"No se pudo abrir el dispositivo para manejar el control del mezclador. Este "
-"elemento no soporta esta versión del Open Sound System."
+"Nav iespējams atvērt audio ierīci jaucēja kontroles vadīšanai. Šis elements "
+"neatbalsta šo Open Sound System versiju."
 
 msgid "Volume"
 msgstr ""
 
 #, fuzzy
 msgid "Master"
-msgstr "Rápido"
+msgstr "Ātrs"
 
 msgid "Front"
-msgstr "Frontal"
+msgstr "Priekšpuse"
 
 msgid "Rear"
-msgstr "Trasero"
+msgstr "Aizmugure"
 
 msgid "Headphones"
-msgstr "Auriculares"
+msgstr "Austiņas"
 
 #, fuzzy
 msgid "Center"
-msgstr "Centrado / LFE"
+msgstr "Centrālais / LFE"
 
 msgid "LFE"
 msgstr ""
 
 #, fuzzy
 msgid "Surround"
-msgstr "Sonido envolvente"
+msgstr "Ieskaujoša skaņa"
 
 msgid "Side"
-msgstr "Lateral"
+msgstr "Puse"
 
 msgid "Built-in Speaker"
 msgstr ""
@@ -134,17 +133,17 @@ msgstr ""
 
 #, fuzzy
 msgid "Telephone"
-msgstr "Auriculares"
+msgstr "Austiņas"
 
 msgid "Microphone"
-msgstr "Micrófono"
+msgstr "Mikrofons"
 
 msgid "Line Out"
 msgstr ""
 
 #, fuzzy
 msgid "Line In"
-msgstr "Línea de entrada"
+msgstr "Line-in"
 
 msgid "Internal CD"
 msgstr ""
@@ -172,7 +171,7 @@ msgstr ""
 
 #, fuzzy
 msgid "Microphone Boost"
-msgstr "Micrófono"
+msgstr "Mikrofons"
 
 msgid "Loopback"
 msgstr ""
@@ -187,7 +186,7 @@ msgid "Playback Ports"
 msgstr ""
 
 msgid "Input"
-msgstr "Entrada"
+msgstr "Ievade"
 
 msgid "Record Source"
 msgstr ""
@@ -205,39 +204,39 @@ msgid "Simulate Stereo"
 msgstr ""
 
 msgid "Stereo"
-msgstr "Estéreo"
+msgstr "Stereo"
 
 #, fuzzy
 msgid "Surround Sound"
-msgstr "Sonido envolvente"
+msgstr "Ieskaujoša skaņa"
 
 #, fuzzy
 msgid "Microphone Gain"
-msgstr "Micrófono"
+msgstr "Mikrofons"
 
 msgid "Speaker Source"
 msgstr ""
 
 #, fuzzy
 msgid "Microphone Source"
-msgstr "Micrófono"
+msgstr "Mikrofons"
 
 msgid "Jack"
 msgstr ""
 
 msgid "Center / LFE"
-msgstr "Centrado / LFE"
+msgstr "Centrālais / LFE"
 
 #, fuzzy
 msgid "Stereo Mix"
-msgstr "Estéreo"
+msgstr "Stereo"
 
 msgid "Mono Mix"
 msgstr ""
 
 #, fuzzy
 msgid "Input Mix"
-msgstr "Mezclador de entrada"
+msgstr "Ievades jaukšana"
 
 msgid "SPDIF In"
 msgstr ""
@@ -247,11 +246,11 @@ msgstr ""
 
 #, fuzzy
 msgid "Microphone 1"
-msgstr "Micrófono"
+msgstr "Mikrofons"
 
 #, fuzzy
 msgid "Microphone 2"
-msgstr "Micrófono"
+msgstr "Mikrofons"
 
 msgid "Digital Out"
 msgstr ""
@@ -275,123 +274,123 @@ msgid "None"
 msgstr ""
 
 msgid "On"
-msgstr "Encendido"
+msgstr "Ieslēgts"
 
 msgid "Off"
-msgstr "Apagado"
+msgstr "Izslēgts"
 
 msgid "Mute"
 msgstr ""
 
 msgid "Fast"
-msgstr "Rápido"
+msgstr "Ātrs"
 
 msgid "Very Low"
 msgstr ""
 
 msgid "Low"
-msgstr "Bajo"
+msgstr "Zems"
 
 msgid "Medium"
-msgstr "Medio"
+msgstr "Vidējs"
 
 msgid "High"
-msgstr "Alto"
+msgstr "Augsts"
 
 #, fuzzy
 msgid "Very High"
-msgstr "Muy alto"
+msgstr "Ļoti augsts"
 
 msgid "Production"
-msgstr "Producción"
+msgstr "Izstrāde"
 
 #, fuzzy
 msgid "Front Panel Microphone"
-msgstr "Micrófono del panel frontal"
+msgstr "Priekšējā paneļa nikrofons"
 
 #, fuzzy
 msgid "Front Panel Line In"
-msgstr "Línea de entrada del panel frontal"
+msgstr "Priekšējā paneļa line-in"
 
 #, fuzzy
 msgid "Front Panel Headphones"
-msgstr "Auriculares del panel frontal"
+msgstr "Priekšējā paneļa austiņas"
 
 #, fuzzy
 msgid "Front Panel Line Out"
-msgstr "Línea de entrada del panel frontal"
+msgstr "Priekšējā paneļa line-in"
 
 #, fuzzy
 msgid "Green Connector"
-msgstr "Conector verde"
+msgstr "Zaļais savienotājs"
 
 #, fuzzy
 msgid "Pink Connector"
-msgstr "Conector rosa"
+msgstr "Rozā savienotājs"
 
 #, fuzzy
 msgid "Blue Connector"
-msgstr "Conector azul"
+msgstr "Zilais savienotājs"
 
 #, fuzzy
 msgid "White Connector"
-msgstr "Conector blanco"
+msgstr "Baltais savienotājs"
 
 #, fuzzy
 msgid "Black Connector"
-msgstr "Conector negro"
+msgstr "Melnais savienotājs"
 
 #, fuzzy
 msgid "Gray Connector"
-msgstr "Conector gris"
+msgstr "Pelēkais savienotājs"
 
 #, fuzzy
 msgid "Orange Connector"
-msgstr "Conector naranja"
+msgstr "Oranžais savienotājs"
 
 #, fuzzy
 msgid "Red Connector"
-msgstr "Conector rojo"
+msgstr "Sarkanais savienotājs"
 
 #, fuzzy
 msgid "Yellow Connector"
-msgstr "Conector amarillo"
+msgstr "Dzeltenais savienotājs"
 
 #, fuzzy
 msgid "Green Front Panel Connector"
-msgstr "Conector verde del panel frontal"
+msgstr "Zaļais priekšējā paneļa savienotājs"
 
 #, fuzzy
 msgid "Pink Front Panel Connector"
-msgstr "Conector rosa del panel frontal"
+msgstr "Rozā priekšējā paneļa savienotājs"
 
 #, fuzzy
 msgid "Blue Front Panel Connector"
-msgstr "Conector azul del panel frontal"
+msgstr "Zilais priekšējā paneļa savienotājs"
 
 #, fuzzy
 msgid "White Front Panel Connector"
-msgstr "Conector blanco del panel frontal"
+msgstr "Baltais priekšējā paneļa savienotājs"
 
 #, fuzzy
 msgid "Black Front Panel Connector"
-msgstr "Conector negro del panel frontal"
+msgstr "Melnais priekšējā paneļa savienotājs"
 
 #, fuzzy
 msgid "Gray Front Panel Connector"
-msgstr "Conector gris del panel frontal"
+msgstr "Pelēkais priekšējā paneļa savienotājs"
 
 #, fuzzy
 msgid "Orange Front Panel Connector"
-msgstr "Conector naranja del panel frontal"
+msgstr "Oranžais priekšējā paneļa savienotājs"
 
 #, fuzzy
 msgid "Red Front Panel Connector"
-msgstr "Conector rojo del panel frontal"
+msgstr "Sarkanais priekšējā paneļa savienotājs"
 
 #, fuzzy
 msgid "Yellow Front Panel Connector"
-msgstr "Conector amarillo del panel frontal"
+msgstr "Dzeltenais priekšējā paneļa savienotājs"
 
 msgid "Spread Output"
 msgstr ""
@@ -401,15 +400,15 @@ msgstr ""
 
 #, fuzzy
 msgid "Virtual Mixer Input"
-msgstr "Entrada del mezclador virtual"
+msgstr "Virtuālā jaucēja ieeja"
 
 #, fuzzy
 msgid "Virtual Mixer Output"
-msgstr "Salida del mezclador virtual"
+msgstr "Virtuālā jaucēja izeja"
 
 #, fuzzy
 msgid "Virtual Mixer Channels"
-msgstr "Entrada del mezclador virtual"
+msgstr "Virtuālā jaucēja ieeja"
 
 #, c-format
 msgid "%s Function"
@@ -423,37 +422,37 @@ msgid ""
 "Could not open audio device for playback. Device is being used by another "
 "application."
 msgstr ""
-"No se pudo abrir el dispositivo de sonido para reproducir. Otra aplicación "
-"está usando el dispositivo."
+"Nav iespējams atvērt audio ierīci atskaņošanai. Ierīci pašlaik izmanto cita "
+"programma."
 
 msgid ""
 "Could not open audio device for playback. You don't have permission to open "
 "the device."
 msgstr ""
-"No se pudo abrir el dispositivo de sonido para reproducir. No tiene permiso "
-"para abrir el dispositivo."
+"Nav iespējams atvērt audio ierīci atskaņošanai. Jums nav nepieciešamās "
+"atļaujas, lai atvērtu ierīci."
 
 msgid "Could not open audio device for playback."
-msgstr "No se pudo abrir el dispositivo de sonido para reproducción."
+msgstr "Nav iespējams atvērt audio ierīci atskaņošanai."
 
 msgid ""
 "Could not open audio device for playback. This version of the Open Sound "
 "System is not supported by this element."
 msgstr ""
-"No se pudo abrir el dispositivo para reproducir. Este elemento no soporta "
-"esta versión del Open Sound System."
+"Nav iespējams atvērt audio ierīci atskaņošanai. Šis elements neatbalsta šo "
+"Open Sound System versiju."
 
 msgid "Playback is not supported by this audio device."
-msgstr "Este dispositivo de sonido no soporta reproducción."
+msgstr "Šī audio ierīce neatbalsta atskaņošanu."
 
 msgid "Audio playback error."
-msgstr "Error en la reproducción del sonido."
+msgstr "Audio atskaņošanas kļūda."
 
 msgid "Recording is not supported by this audio device."
-msgstr "Este dispositivo de sonido no soporta grabación."
+msgstr "Šī audio ierīce neatbalsta ierakstīšanu."
 
 msgid "Error recording from audio device."
-msgstr "Error al grabar desde el dispositivo de sonido."
+msgstr "Radās kļūda ierakstot no audio ierīces."
 
 #~ msgid "PCM 1"
 #~ msgstr "PCM 1"
@@ -468,70 +467,58 @@ msgstr "Error al grabar desde el dispositivo de sonido."
 #~ msgstr "PCM 4"
 
 #~ msgid "Green connector function"
-#~ msgstr "Función del conector verde"
+#~ msgstr "Zaļā savienotāja funkcija"
 
 #~ msgid "Green front panel connector function"
-#~ msgstr "Función del conector verde del panel frontal"
+#~ msgstr "Zaļā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "Pink connector function"
-#~ msgstr "Función del conector rosa"
+#~ msgstr "Rozā savienotāja funkcija"
 
 #~ msgid "Pink front panel connector function"
-#~ msgstr "Función del conector rosa del panel frontal"
+#~ msgstr "Rozā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "Blue connector function"
-#~ msgstr "Función del conector azul"
+#~ msgstr "Zilā savienotāja funkcija"
 
 #~ msgid "Blue front panel connector function"
-#~ msgstr "Función del conector azul del panel frontal"
+#~ msgstr "Zilā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "Orange connector function"
-#~ msgstr "Función del conector naranja"
+#~ msgstr "Oranžā savienotāja funkcija"
 
 #~ msgid "Orange front panel connector function"
-#~ msgstr "Función del conector naranja del panel frontal"
+#~ msgstr "Oranžā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "Black connector function"
-#~ msgstr "Función del conector negro"
+#~ msgstr "Melnā savienotāja funkcija"
 
 #~ msgid "Black front panel connector function"
-#~ msgstr "Función del conector negro del panel frontal"
+#~ msgstr "Melnā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "Gray connector function"
-#~ msgstr "Función del conector gris"
+#~ msgstr "Pelēkā savienotāja funkcija"
 
 #~ msgid "Gray front panel connector function"
-#~ msgstr "Función del conector gris del panel frontal"
+#~ msgstr "Pelēkā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "White connector function"
-#~ msgstr "Función del conector blanco"
+#~ msgstr "Baltā savienotāja funkcija"
 
 #~ msgid "White front panel connector function"
-#~ msgstr "Función del conector blanco del panel frontal"
+#~ msgstr "Baltā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "Red connector function"
-#~ msgstr "Función del conector rojo"
+#~ msgstr "Sarkanā savienotāja funkcija"
 
 #~ msgid "Red front panel connector function"
-#~ msgstr "Función del conector rojo del panel frontal"
+#~ msgstr "Sarkanā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "Yellow connector function"
-#~ msgstr "Función del conector amarillo"
+#~ msgstr "Dzeltenā savienotāja funkcija"
 
 #~ msgid "Yellow front panel connector function"
-#~ msgstr "Función del conector amarillo del panel frontal"
+#~ msgstr "Dzeltenā priekšējā paneļa savienotāja funkcija"
 
 #~ msgid "Virtual mixer channel configuration"
-#~ msgstr "Configuración del canal del mezclador virtual"
-
-#~ msgid "Failed to configure TwoLAME encoder. Check your encoding parameters."
-#~ msgstr ""
-#~ "Falló al configurar el codificador TwoLAME. Compruebe sus parámetros de "
-#~ "codificación."
-
-#~ msgid ""
-#~ "The requested bitrate %d kbit/s for property '%s' is not allowed. The "
-#~ "bitrate was changed to %d kbit/s."
-#~ msgstr ""
-#~ "La tasa de bits %d kbps solicitada para la propiedad «%s» no está "
-#~ "permitida. La tasa de bits se cambió a %d kbps."
+#~ msgstr "Virtuālā jaucēja kanālu konfigurācija"
