--- a/gst-plugins-bad/po/mt.po
+++ b/gst-plugins-bad/po/mt.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad-0.10.8.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2008-10-26 20:27+0100\n"
 "Last-Translator: Michel Bugeja <michelbugeja@rabatmalta.com>\n"
 "Language-Team: Maltese <translation-team-mt@lists.sourceforge.net>\n"
@@ -73,8 +73,219 @@ msgstr ""
 "Ma nistax niftaħ apparat tal-awdjo għal mixer control handling. Din il-"
 "verzjoni ta' Open Sound System mhux issapportjata minn din l-element."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Fast"
+
+msgid "Front"
+msgstr "Quddiem"
+
+msgid "Rear"
+msgstr "Wara"
+
+msgid "Headphones"
+msgstr "Headphones"
+
+#, fuzzy
+msgid "Center"
+msgstr "Center / LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Surround sound"
+
+msgid "Side"
+msgstr "Ġenb"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Headphones"
+
+msgid "Microphone"
+msgstr "Mikrofonu"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Line-in"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofonu"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Input"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Stereo"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Surround sound"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofonu"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofonu"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Center / LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Stereo"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Input mix"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofonu"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofonu"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "On"
+
+msgid "Off"
+msgstr "Off"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Fast"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Low"
@@ -85,191 +296,126 @@ msgstr "Medium"
 msgid "High"
 msgstr "High"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Very high"
 
 msgid "Production"
 msgstr "Production"
 
-msgid "Off"
-msgstr "Off"
-
-msgid "On"
-msgstr "On"
-
-msgid "Stereo"
-msgstr "Stereo"
-
-msgid "Surround sound"
-msgstr "Surround sound"
-
-msgid "Input mix"
-msgstr "Input mix"
-
-msgid "Front"
-msgstr "Quddiem"
-
-msgid "Rear"
-msgstr "Wara"
-
-msgid "Side"
-msgstr "Ġenb"
-
-msgid "Center / LFE"
-msgstr "Center / LFE"
-
-msgid "Microphone"
-msgstr "Mikrofonu"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Mikrofonu tal-panella ta' quddiem"
 
-msgid "Input"
-msgstr "Input"
-
-msgid "Line-in"
-msgstr "Line-in"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Connector aħdar"
-
-msgid "Green front panel connector"
-msgstr "Front panel connector aħdar"
-
-msgid "Pink connector"
-msgstr "Connector roża"
-
-msgid "Pink front panel connector"
-msgstr "Front panel connector roża"
-
-msgid "Blue connector"
-msgstr "Connector Blu"
-
-msgid "Blue front panel connector"
-msgstr "Front panel connector blu"
-
-msgid "Orange connector"
-msgstr "Connector oranġjo"
-
-msgid "Orange front panel connector"
-msgstr "Front Panel connector oranġjo"
-
-msgid "Black connector"
-msgstr "Connector iswed"
-
-msgid "Black front panel connector"
-msgstr "Front panel connector iswed"
-
-msgid "Gray connector"
-msgstr "Connector Griż"
-
-msgid "Gray front panel connector"
-msgstr "Front panel connector Griż"
-
-msgid "White connector"
-msgstr "Connector abjad"
-
-msgid "White front panel connector"
-msgstr "Front panel connector abjad"
-
-msgid "Red connector"
-msgstr "Connector aħmar"
-
-msgid "Red front panel connector"
-msgstr "Front panel connector aħmar"
-
-msgid "Yellow connector"
-msgstr "Connector isfar"
-
-msgid "Yellow front panel connector"
-msgstr "Front panel connector isfar"
-
-msgid "Green connector function"
-msgstr "Connector function aħdar"
-
-msgid "Green front panel connector function"
-msgstr "Front panel connector function aħdar"
-
-msgid "Pink connector function"
-msgstr "Connector function roża"
-
-msgid "Pink front panel connector function"
-msgstr "Front panel connector function roża"
-
-msgid "Blue connector function"
-msgstr "Connector function blu"
-
-msgid "Blue front panel connector function"
-msgstr "Front panel connector function blu"
-
-msgid "Orange connector function"
-msgstr "Connector function oranġjo"
-
-msgid "Orange front panel connector function"
-msgstr "Front panel connector function oranġjo"
-
-msgid "Black connector function"
-msgstr "Connector function iswed"
-
-msgid "Black front panel connector function"
-msgstr "Front panel connector function iswed"
-
-msgid "Gray connector function"
-msgstr "Connector function griż"
-
-msgid "Gray front panel connector function"
-msgstr "Front panel connector function griż"
-
-msgid "White connector function"
-msgstr "Connector function abjad"
-
-msgid "White front panel connector function"
-msgstr "Front panel connector function abjad"
-
-msgid "Red connector function"
-msgstr "Connector function aħmar"
-
-msgid "Red front panel connector function"
-msgstr "Front panel connector function aħmar"
-
-msgid "Yellow connector function"
-msgstr "Connector function isfar"
-
-msgid "Yellow front panel connector function"
-msgstr "Front panel connector function isfar"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Front panel line-in"
 
-msgid "Headphones"
-msgstr "Headphones"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Front panel headphones"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Front panel line-in"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Connector aħdar"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Connector roża"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Connector Blu"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Connector abjad"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Connector iswed"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Connector Griż"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Connector oranġjo"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Connector aħmar"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Connector isfar"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Front panel connector aħdar"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Front panel connector roża"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Front panel connector blu"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Front panel connector abjad"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Front panel connector iswed"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Front panel connector Griż"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Front Panel connector oranġjo"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Front panel connector aħmar"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Front panel connector isfar"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Virtual mixer input"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Virtual mixer output"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Virtual mixer channel configuration"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Virtual mixer input"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -318,3 +464,72 @@ msgstr "Żball fl-irrekordjar mill-apparat tal-awdjo."
 #~ msgstr ""
 #~ "Il-bitrate rikjesta ta' %d kbit/s għal-property '%s' mhux permessa. Il-"
 #~ "bitrate ġiet mibdula għal %d kbit/s. "
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Connector function aħdar"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Front panel connector function aħdar"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Connector function roża"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Front panel connector function roża"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Connector function blu"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Front panel connector function blu"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Connector function oranġjo"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Front panel connector function oranġjo"
+
+#~ msgid "Black connector function"
+#~ msgstr "Connector function iswed"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Front panel connector function iswed"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Connector function griż"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Front panel connector function griż"
+
+#~ msgid "White connector function"
+#~ msgstr "Connector function abjad"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Front panel connector function abjad"
+
+#~ msgid "Red connector function"
+#~ msgstr "Connector function aħmar"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Front panel connector function aħmar"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Connector function isfar"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Front panel connector function isfar"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Virtual mixer channel configuration"
