--- a/gst-plugins-bad/po/or.po
+++ b/gst-plugins-bad/po/or.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-0.8.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2004-09-27 13:32+0530\n"
 "Last-Translator: Gora Mohanty <gora_mohanty@yahoo.co.in>\n"
 "Language-Team: Oriya <gora_mohanty@yahoo.co.in>\n"
@@ -74,7 +74,219 @@ msgid ""
 "Open Sound System is not supported by this element."
 msgstr "\"%s\" ଧ୍ବନି ଯନ୍ତ୍ର ଲେଖିବା ପାଇଁ ଖୋଲିହେଲା ନାହିଁ."
 
+msgid "Volume"
+msgstr "ପ୍ରବଳତା"
+
+msgid "Master"
+msgstr ""
+
+msgid "Front"
+msgstr ""
+
+#, fuzzy
+msgid "Rear"
+msgstr "ଅନୁଲିପିକରଣ"
+
+msgid "Headphones"
+msgstr ""
+
+msgid "Center"
+msgstr ""
+
+msgid "LFE"
+msgstr ""
+
+msgid "Surround"
+msgstr ""
+
+#, fuzzy
+msgid "Side"
+msgstr "ଭିଡିଓ"
+
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "ସ୍ବରବର୍ଦ୍ଧକ ୟନ୍ତ୍ର"
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr "ଅନୁଚ୍ଚ ସ୍ବର"
+
+msgid "Treble"
+msgstr "ଉଚ୍ଚ ସ୍ବର"
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+msgid "Telephone"
+msgstr ""
+
+msgid "Microphone"
+msgstr "ମାଇକ୍ରୋଫୋନ୍"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "ଲାଇନ-ଇନ"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "ପି.ସି.ଏମ."
+
+msgid "Record Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Output Gain"
+msgstr "ନିର୍ଗମ-ବୃଦ୍ଧି"
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "ମାଇକ୍ରୋଫୋନ୍"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr ""
+
+msgid "Record Source"
+msgstr ""
+
+#, fuzzy
+msgid "Monitor Source"
+msgstr "ପ୍ରଦର୍ଶିକା"
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr "ପ୍ରଦର୍ଶିକା"
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr ""
+
+msgid "Surround Sound"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "ମାଇକ୍ରୋଫୋନ୍"
+
+#, fuzzy
+msgid "Speaker Source"
+msgstr "ସ୍ବରବର୍ଦ୍ଧକ ୟନ୍ତ୍ର"
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "ମାଇକ୍ରୋଫୋନ୍"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr ""
+
+msgid "Stereo Mix"
+msgstr ""
+
+msgid "Mono Mix"
+msgstr ""
+
+msgid "Input Mix"
+msgstr ""
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "ମାଇକ୍ରୋଫୋନ୍"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "ମାଇକ୍ରୋଫୋନ୍"
+
+#, fuzzy
+msgid "Digital Out"
+msgstr "ସାଂଖ୍ଯିକ-୧"
+
+#, fuzzy
+msgid "Digital In"
+msgstr "ସାଂଖ୍ଯିକ-୧"
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr ""
+
+msgid "Off"
+msgstr ""
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
+msgstr ""
+
+msgid "Very Low"
 msgstr ""
 
 msgid "Low"
@@ -86,196 +298,100 @@ msgstr ""
 msgid "High"
 msgstr ""
 
-msgid "Very high"
+msgid "Very High"
 msgstr ""
 
 msgid "Production"
 msgstr ""
 
-msgid "Off"
-msgstr ""
-
-msgid "On"
-msgstr ""
-
-msgid "Stereo"
-msgstr ""
-
-msgid "Surround sound"
-msgstr ""
-
-msgid "Input mix"
-msgstr ""
-
-msgid "Front"
-msgstr ""
-
 #, fuzzy
-msgid "Rear"
-msgstr "ଅନୁଲିପିକରଣ"
-
-#, fuzzy
-msgid "Side"
-msgstr "ଭିଡିଓ"
-
-msgid "Center / LFE"
-msgstr ""
-
-msgid "Microphone"
+msgid "Front Panel Microphone"
 msgstr "ମାଇକ୍ରୋଫୋନ୍"
 
-msgid "Front panel microphone"
+msgid "Front Panel Line In"
 msgstr ""
 
-msgid "Input"
+msgid "Front Panel Headphones"
 msgstr ""
 
-msgid "Line-in"
-msgstr "ଲାଇନ-ଇନ"
-
-#, fuzzy
-msgid "PCM 1"
-msgstr "ପି.ସି.ଏମ."
-
-#, fuzzy
-msgid "PCM 2"
-msgstr "ପି.ସି.ଏମ.-୨"
-
-#, fuzzy
-msgid "PCM 3"
-msgstr "ପି.ସି.ଏମ."
-
-#, fuzzy
-msgid "PCM 4"
-msgstr "ପି.ସି.ଏମ."
-
-msgid "Green connector"
+msgid "Front Panel Line Out"
 msgstr ""
 
-msgid "Green front panel connector"
+msgid "Green Connector"
 msgstr ""
 
-msgid "Pink connector"
+msgid "Pink Connector"
 msgstr ""
 
-msgid "Pink front panel connector"
+msgid "Blue Connector"
 msgstr ""
 
-msgid "Blue connector"
+msgid "White Connector"
 msgstr ""
 
-msgid "Blue front panel connector"
+msgid "Black Connector"
 msgstr ""
 
-msgid "Orange connector"
+msgid "Gray Connector"
 msgstr ""
 
-msgid "Orange front panel connector"
+msgid "Orange Connector"
 msgstr ""
 
-msgid "Black connector"
+msgid "Red Connector"
 msgstr ""
 
-msgid "Black front panel connector"
+msgid "Yellow Connector"
 msgstr ""
 
-msgid "Gray connector"
+msgid "Green Front Panel Connector"
 msgstr ""
 
-msgid "Gray front panel connector"
+msgid "Pink Front Panel Connector"
 msgstr ""
 
-msgid "White connector"
+msgid "Blue Front Panel Connector"
 msgstr ""
 
-msgid "White front panel connector"
+msgid "White Front Panel Connector"
 msgstr ""
 
-msgid "Red connector"
+msgid "Black Front Panel Connector"
 msgstr ""
 
-msgid "Red front panel connector"
+msgid "Gray Front Panel Connector"
 msgstr ""
 
-msgid "Yellow connector"
+msgid "Orange Front Panel Connector"
 msgstr ""
 
-msgid "Yellow front panel connector"
+msgid "Red Front Panel Connector"
 msgstr ""
 
-msgid "Green connector function"
+msgid "Yellow Front Panel Connector"
 msgstr ""
 
-msgid "Green front panel connector function"
+msgid "Spread Output"
 msgstr ""
 
-msgid "Pink connector function"
+msgid "Downmix"
 msgstr ""
 
-msgid "Pink front panel connector function"
+msgid "Virtual Mixer Input"
 msgstr ""
 
-msgid "Blue connector function"
+msgid "Virtual Mixer Output"
 msgstr ""
 
-msgid "Blue front panel connector function"
+msgid "Virtual Mixer Channels"
 msgstr ""
 
-msgid "Orange connector function"
+#, c-format
+msgid "%s Function"
 msgstr ""
 
-msgid "Orange front panel connector function"
-msgstr ""
-
-msgid "Black connector function"
-msgstr ""
-
-msgid "Black front panel connector function"
-msgstr ""
-
-msgid "Gray connector function"
-msgstr ""
-
-msgid "Gray front panel connector function"
-msgstr ""
-
-msgid "White connector function"
-msgstr ""
-
-msgid "White front panel connector function"
-msgstr ""
-
-msgid "Red connector function"
-msgstr ""
-
-msgid "Red front panel connector function"
-msgstr ""
-
-msgid "Yellow connector function"
-msgstr ""
-
-msgid "Yellow front panel connector function"
-msgstr ""
-
-msgid "Front panel line-in"
-msgstr ""
-
-msgid "Headphones"
-msgstr ""
-
-msgid "Front panel headphones"
-msgstr ""
-
-msgid "PCM"
-msgstr "ପି.ସି.ଏମ."
-
-msgid "Virtual mixer input"
-msgstr ""
-
-msgid "Virtual mixer output"
-msgstr ""
-
-msgid "Virtual mixer channel configuration"
+#, c-format
+msgid "%s %d"
 msgstr ""
 
 msgid ""
@@ -309,6 +425,22 @@ msgstr ""
 
 msgid "Error recording from audio device."
 msgstr ""
+
+#, fuzzy
+#~ msgid "PCM 1"
+#~ msgstr "ପି.ସି.ଏମ."
+
+#, fuzzy
+#~ msgid "PCM 2"
+#~ msgstr "ପି.ସି.ଏମ.-୨"
+
+#, fuzzy
+#~ msgid "PCM 3"
+#~ msgstr "ପି.ସି.ଏମ."
+
+#, fuzzy
+#~ msgid "PCM 4"
+#~ msgstr "ପି.ସି.ଏମ."
 
 #~ msgid "Could not open device \"%s\" for reading and writing."
 #~ msgstr "\"%s\" ଯନ୍ତ୍ର ପଢ଼ିବା ଓ ଲେଖିବା ପାଇଁ ଖୋଲିହେଲା ନାହିଁ."
@@ -361,20 +493,8 @@ msgstr ""
 #~ msgid "Your OSS device could not be probed correctly"
 #~ msgstr "ଆପଣଙ୍କର ଓ.ଏସ.ଏସ. ଯନ୍ତ୍ରର ଠିକ ଭାବରେ ଅନୁସନ୍ଧାନ କରିହେଲା ନାହିଁ."
 
-#~ msgid "Volume"
-#~ msgstr "ପ୍ରବଳତା"
-
-#~ msgid "Bass"
-#~ msgstr "ଅନୁଚ୍ଚ ସ୍ବର"
-
-#~ msgid "Treble"
-#~ msgstr "ଉଚ୍ଚ ସ୍ବର"
-
 #~ msgid "Synth"
 #~ msgstr "ସିନ୍ଥେସାଇଜର"
-
-#~ msgid "Speaker"
-#~ msgstr "ସ୍ବରବର୍ଦ୍ଧକ ୟନ୍ତ୍ର"
 
 #~ msgid "CD"
 #~ msgstr "ସି.ଡି."
@@ -385,9 +505,6 @@ msgstr ""
 #~ msgid "In-gain"
 #~ msgstr "ନିବେଶ-ବୃଦ୍ଧି"
 
-#~ msgid "Out-gain"
-#~ msgstr "ନିର୍ଗମ-ବୃଦ୍ଧି"
-
 #~ msgid "Line-1"
 #~ msgstr "ଲାଇନ-୧"
 
@@ -396,9 +513,6 @@ msgstr ""
 
 #~ msgid "Line-3"
 #~ msgstr "ଲାଇନ-୩"
-
-#~ msgid "Digital-1"
-#~ msgstr "ସାଂଖ୍ଯିକ-୧"
 
 #~ msgid "Digital-2"
 #~ msgstr "ସାଂଖ୍ଯିକ-୨"
@@ -414,13 +528,6 @@ msgstr ""
 
 #~ msgid "Radio"
 #~ msgstr "ରେଡିଓ"
-
-#~ msgid "Monitor"
-#~ msgstr "ପ୍ରଦର୍ଶିକା"
-
-#, fuzzy
-#~ msgid "PC Speaker"
-#~ msgstr "ସ୍ବରବର୍ଦ୍ଧକ ୟନ୍ତ୍ର"
 
 #~ msgid "Could not open CD device for reading."
 #~ msgstr "ସି.ଡି. ଯନ୍ତ୍ର ପଢ଼ିବା ପାଇଁ ଖୋଲିହେଲା ନାହିଁ."
