--- a/gst-plugins-bad/po/pt_BR.po
+++ b/gst-plugins-bad/po/pt_BR.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad-0.10.10.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-03-11 02:31-0300\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
@@ -76,8 +76,219 @@ msgstr ""
 "Não foi possível abrir o dispositivo de áudio para manuseio do controle de "
 "mixer. Não há suporte a este elemento nesta versão do Open Sound System."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Rápido"
+
+msgid "Front"
+msgstr "Frontal"
+
+msgid "Rear"
+msgstr "Traseira"
+
+msgid "Headphones"
+msgstr "Fones de ouvido"
+
+#, fuzzy
+msgid "Center"
+msgstr "Centro/LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Som surround"
+
+msgid "Side"
+msgstr "Lateral"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Fones de ouvido"
+
+msgid "Microphone"
+msgstr "Microfone"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Entrada de linha"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Microfone"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Entrada"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Estéreo"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Som surround"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Microfone"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Microfone"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Centro/LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Estéreo"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Mistura de entrada"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Microfone"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Microfone"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "Ligado"
+
+msgid "Off"
+msgstr "Desligado"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Rápido"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Baixo"
@@ -88,191 +299,126 @@ msgstr "Médio"
 msgid "High"
 msgstr "Alto"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Muito alto"
 
 msgid "Production"
 msgstr "Produção"
 
-msgid "Off"
-msgstr "Desligado"
-
-msgid "On"
-msgstr "Ligado"
-
-msgid "Stereo"
-msgstr "Estéreo"
-
-msgid "Surround sound"
-msgstr "Som surround"
-
-msgid "Input mix"
-msgstr "Mistura de entrada"
-
-msgid "Front"
-msgstr "Frontal"
-
-msgid "Rear"
-msgstr "Traseira"
-
-msgid "Side"
-msgstr "Lateral"
-
-msgid "Center / LFE"
-msgstr "Centro/LFE"
-
-msgid "Microphone"
-msgstr "Microfone"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Microfone do painel frontal"
 
-msgid "Input"
-msgstr "Entrada"
-
-msgid "Line-in"
-msgstr "Entrada de linha"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Conector verde"
-
-msgid "Green front panel connector"
-msgstr "Conector verde do painel frontal"
-
-msgid "Pink connector"
-msgstr "Conector rosa"
-
-msgid "Pink front panel connector"
-msgstr "Conector rosa do painel frontal"
-
-msgid "Blue connector"
-msgstr "Conector azul"
-
-msgid "Blue front panel connector"
-msgstr "Conector azul do painel frontal"
-
-msgid "Orange connector"
-msgstr "Conector laranja"
-
-msgid "Orange front panel connector"
-msgstr "Conector laranja do painel frontal"
-
-msgid "Black connector"
-msgstr "Conector preto"
-
-msgid "Black front panel connector"
-msgstr "Conector preto do painel frontal"
-
-msgid "Gray connector"
-msgstr "Conector cinza"
-
-msgid "Gray front panel connector"
-msgstr "Conector cinza do painel frontal"
-
-msgid "White connector"
-msgstr "Conector branco"
-
-msgid "White front panel connector"
-msgstr "Conector branco do painel frontal"
-
-msgid "Red connector"
-msgstr "Conector vermelho"
-
-msgid "Red front panel connector"
-msgstr "Conector vermelho do painel frontal"
-
-msgid "Yellow connector"
-msgstr "Conector amarelo"
-
-msgid "Yellow front panel connector"
-msgstr "Conector amarelo do painel frontal"
-
-msgid "Green connector function"
-msgstr "Função do conector verde"
-
-msgid "Green front panel connector function"
-msgstr "Função do conector verde do painel frontal"
-
-msgid "Pink connector function"
-msgstr "Função do conector rosa"
-
-msgid "Pink front panel connector function"
-msgstr "Função do conector rosa do painel frontal"
-
-msgid "Blue connector function"
-msgstr "Função do conector azul"
-
-msgid "Blue front panel connector function"
-msgstr "Função do conector azul do painel frontal"
-
-msgid "Orange connector function"
-msgstr "Função do conector laranja"
-
-msgid "Orange front panel connector function"
-msgstr "Função do conector laranja do painel frontal"
-
-msgid "Black connector function"
-msgstr "Função do conector preto"
-
-msgid "Black front panel connector function"
-msgstr "Função do conector preto do painel frontal"
-
-msgid "Gray connector function"
-msgstr "Função do conector cinza"
-
-msgid "Gray front panel connector function"
-msgstr "Função do conector cinza do painel frontal"
-
-msgid "White connector function"
-msgstr "Função do conector branco"
-
-msgid "White front panel connector function"
-msgstr "Função do conector branco do painel frontal"
-
-msgid "Red connector function"
-msgstr "Função do conector vermelho"
-
-msgid "Red front panel connector function"
-msgstr "Função do conector vermelho do painel frontal"
-
-msgid "Yellow connector function"
-msgstr "Função do conector amarelo"
-
-msgid "Yellow front panel connector function"
-msgstr "Função do conector amarelo do painel frontal"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Entrada de linha do painel frontal"
 
-msgid "Headphones"
-msgstr "Fones de ouvido"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Fones de ouvido do painel frontal"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Entrada de linha do painel frontal"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Conector verde"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Conector rosa"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Conector azul"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Conector branco"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Conector preto"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Conector cinza"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Conector laranja"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Conector vermelho"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Conector amarelo"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Conector verde do painel frontal"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Conector rosa do painel frontal"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Conector azul do painel frontal"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Conector branco do painel frontal"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Conector preto do painel frontal"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Conector cinza do painel frontal"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Conector laranja do painel frontal"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Conector vermelho do painel frontal"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Conector amarelo do painel frontal"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Entrada do mixer virtual"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Saída do mixer virtual"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Configuração de canal do mixer virtual"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Entrada do mixer virtual"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -309,3 +455,72 @@ msgstr "Não há suporte a gravação neste dispositivo de áudio."
 
 msgid "Error recording from audio device."
 msgstr "Erro ao gravar deste dispositivo de áudio."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Função do conector verde"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Função do conector verde do painel frontal"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Função do conector rosa"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Função do conector rosa do painel frontal"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Função do conector azul"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Função do conector azul do painel frontal"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Função do conector laranja"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Função do conector laranja do painel frontal"
+
+#~ msgid "Black connector function"
+#~ msgstr "Função do conector preto"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Função do conector preto do painel frontal"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Função do conector cinza"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Função do conector cinza do painel frontal"
+
+#~ msgid "White connector function"
+#~ msgstr "Função do conector branco"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Função do conector branco do painel frontal"
+
+#~ msgid "Red connector function"
+#~ msgstr "Função do conector vermelho"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Função do conector vermelho do painel frontal"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Função do conector amarelo"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Função do conector amarelo do painel frontal"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Configuração de canal do mixer virtual"
