--- a/gst-plugins-bad/po/sq.po
+++ b/gst-plugins-bad/po/sq.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.7.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2008-08-15 16:07+0200\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: Albanian <translation-team-sq@lists.sourceforge.net>\n"
@@ -72,7 +72,222 @@ msgid ""
 "Open Sound System is not supported by this element."
 msgstr ""
 
+msgid "Volume"
+msgstr "Volumi"
+
+msgid "Master"
+msgstr ""
+
+msgid "Front"
+msgstr ""
+
+#, fuzzy
+msgid "Rear"
+msgstr "Regjistrimi"
+
+msgid "Headphones"
+msgstr ""
+
+msgid "Center"
+msgstr ""
+
+msgid "LFE"
+msgstr ""
+
+msgid "Surround"
+msgstr ""
+
+#, fuzzy
+msgid "Side"
+msgstr "Video"
+
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "Zë folës"
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr "Bas"
+
+msgid "Treble"
+msgstr "Treble"
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+msgid "Telephone"
+msgstr ""
+
+msgid "Microphone"
+msgstr "Mikrofoni"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Linja-hyrje"
+
+msgid "Internal CD"
+msgstr ""
+
+#, fuzzy
+msgid "Video In"
+msgstr "Video"
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+#, fuzzy
+msgid "Record Gain"
+msgstr "Regjistrimi"
+
+#, fuzzy
+msgid "Output Gain"
+msgstr "Out-gain"
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofoni"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr ""
+
+#, fuzzy
+msgid "Record Source"
+msgstr "Regjistrimi"
+
+#, fuzzy
+msgid "Monitor Source"
+msgstr "Ekrani"
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr "Ekrani"
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr ""
+
+msgid "Surround Sound"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofoni"
+
+#, fuzzy
+msgid "Speaker Source"
+msgstr "Zë folës"
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofoni"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr ""
+
+msgid "Stereo Mix"
+msgstr ""
+
+msgid "Mono Mix"
+msgstr ""
+
+msgid "Input Mix"
+msgstr ""
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofoni"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofoni"
+
+#, fuzzy
+msgid "Digital Out"
+msgstr "Dixhitale-1"
+
+#, fuzzy
+msgid "Digital In"
+msgstr "Dixhitale-1"
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr ""
+
+msgid "Off"
+msgstr ""
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
+msgstr ""
+
+msgid "Very Low"
 msgstr ""
 
 msgid "Low"
@@ -84,196 +299,100 @@ msgstr ""
 msgid "High"
 msgstr ""
 
-msgid "Very high"
+msgid "Very High"
 msgstr ""
 
 msgid "Production"
 msgstr ""
 
-msgid "Off"
-msgstr ""
-
-msgid "On"
-msgstr ""
-
-msgid "Stereo"
-msgstr ""
-
-msgid "Surround sound"
-msgstr ""
-
-msgid "Input mix"
-msgstr ""
-
-msgid "Front"
-msgstr ""
-
 #, fuzzy
-msgid "Rear"
-msgstr "Regjistrimi"
-
-#, fuzzy
-msgid "Side"
-msgstr "Video"
-
-msgid "Center / LFE"
-msgstr ""
-
-msgid "Microphone"
+msgid "Front Panel Microphone"
 msgstr "Mikrofoni"
 
-msgid "Front panel microphone"
+msgid "Front Panel Line In"
 msgstr ""
 
-msgid "Input"
+msgid "Front Panel Headphones"
 msgstr ""
 
-msgid "Line-in"
-msgstr "Linja-hyrje"
-
-#, fuzzy
-msgid "PCM 1"
-msgstr "PCM"
-
-#, fuzzy
-msgid "PCM 2"
-msgstr "PCM-2"
-
-#, fuzzy
-msgid "PCM 3"
-msgstr "PCM"
-
-#, fuzzy
-msgid "PCM 4"
-msgstr "PCM"
-
-msgid "Green connector"
+msgid "Front Panel Line Out"
 msgstr ""
 
-msgid "Green front panel connector"
+msgid "Green Connector"
 msgstr ""
 
-msgid "Pink connector"
+msgid "Pink Connector"
 msgstr ""
 
-msgid "Pink front panel connector"
+msgid "Blue Connector"
 msgstr ""
 
-msgid "Blue connector"
+msgid "White Connector"
 msgstr ""
 
-msgid "Blue front panel connector"
+msgid "Black Connector"
 msgstr ""
 
-msgid "Orange connector"
+msgid "Gray Connector"
 msgstr ""
 
-msgid "Orange front panel connector"
+msgid "Orange Connector"
 msgstr ""
 
-msgid "Black connector"
+msgid "Red Connector"
 msgstr ""
 
-msgid "Black front panel connector"
+msgid "Yellow Connector"
 msgstr ""
 
-msgid "Gray connector"
+msgid "Green Front Panel Connector"
 msgstr ""
 
-msgid "Gray front panel connector"
+msgid "Pink Front Panel Connector"
 msgstr ""
 
-msgid "White connector"
+msgid "Blue Front Panel Connector"
 msgstr ""
 
-msgid "White front panel connector"
+msgid "White Front Panel Connector"
 msgstr ""
 
-msgid "Red connector"
+msgid "Black Front Panel Connector"
 msgstr ""
 
-msgid "Red front panel connector"
+msgid "Gray Front Panel Connector"
 msgstr ""
 
-msgid "Yellow connector"
+msgid "Orange Front Panel Connector"
 msgstr ""
 
-msgid "Yellow front panel connector"
+msgid "Red Front Panel Connector"
 msgstr ""
 
-msgid "Green connector function"
+msgid "Yellow Front Panel Connector"
 msgstr ""
 
-msgid "Green front panel connector function"
+msgid "Spread Output"
 msgstr ""
 
-msgid "Pink connector function"
+msgid "Downmix"
 msgstr ""
 
-msgid "Pink front panel connector function"
+msgid "Virtual Mixer Input"
 msgstr ""
 
-msgid "Blue connector function"
+msgid "Virtual Mixer Output"
 msgstr ""
 
-msgid "Blue front panel connector function"
+msgid "Virtual Mixer Channels"
 msgstr ""
 
-msgid "Orange connector function"
+#, c-format
+msgid "%s Function"
 msgstr ""
 
-msgid "Orange front panel connector function"
-msgstr ""
-
-msgid "Black connector function"
-msgstr ""
-
-msgid "Black front panel connector function"
-msgstr ""
-
-msgid "Gray connector function"
-msgstr ""
-
-msgid "Gray front panel connector function"
-msgstr ""
-
-msgid "White connector function"
-msgstr ""
-
-msgid "White front panel connector function"
-msgstr ""
-
-msgid "Red connector function"
-msgstr ""
-
-msgid "Red front panel connector function"
-msgstr ""
-
-msgid "Yellow connector function"
-msgstr ""
-
-msgid "Yellow front panel connector function"
-msgstr ""
-
-msgid "Front panel line-in"
-msgstr ""
-
-msgid "Headphones"
-msgstr ""
-
-msgid "Front panel headphones"
-msgstr ""
-
-msgid "PCM"
-msgstr "PCM"
-
-msgid "Virtual mixer input"
-msgstr ""
-
-msgid "Virtual mixer output"
-msgstr ""
-
-msgid "Virtual mixer channel configuration"
+#, c-format
+msgid "%s %d"
 msgstr ""
 
 msgid ""
@@ -360,20 +479,8 @@ msgstr ""
 #~ msgid "Your OSS device could not be probed correctly"
 #~ msgstr "Dispozitivi juaj OSS mund të mos provohet korrektësisht"
 
-#~ msgid "Volume"
-#~ msgstr "Volumi"
-
-#~ msgid "Bass"
-#~ msgstr "Bas"
-
-#~ msgid "Treble"
-#~ msgstr "Treble"
-
 #~ msgid "Synth"
 #~ msgstr "Sintetizuesi"
-
-#~ msgid "Speaker"
-#~ msgstr "Zë folës"
 
 #~ msgid "CD"
 #~ msgstr "CD"
@@ -381,11 +488,11 @@ msgstr ""
 #~ msgid "Mixer"
 #~ msgstr "Kontrolli i volumit"
 
+#~ msgid "PCM-2"
+#~ msgstr "PCM-2"
+
 #~ msgid "In-gain"
 #~ msgstr "In-gain"
-
-#~ msgid "Out-gain"
-#~ msgstr "Out-gain"
 
 #~ msgid "Line-1"
 #~ msgstr "Linja-1"
@@ -395,9 +502,6 @@ msgstr ""
 
 #~ msgid "Line-3"
 #~ msgstr "Linja-3"
-
-#~ msgid "Digital-1"
-#~ msgstr "Dixhitale-1"
 
 #~ msgid "Digital-2"
 #~ msgstr "Dixhitale-2"
@@ -413,13 +517,6 @@ msgstr ""
 
 #~ msgid "Radio"
 #~ msgstr "Radio"
-
-#~ msgid "Monitor"
-#~ msgstr "Ekrani"
-
-#, fuzzy
-#~ msgid "PC Speaker"
-#~ msgstr "Zë folës"
 
 #~ msgid "Could not open CD device for reading."
 #~ msgstr "I pamundur hapja e dispozitivit CD për lexim."
