--- a/gst-plugins-bad/po/sr.po
+++ b/gst-plugins-bad/po/sr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.7.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2004-03-13 00:18+0100\n"
 "Last-Translator: Danilo Segan <dsegan@gmx.net>\n"
 "Language-Team: Serbian <gnu@prevod.org>\n"
@@ -73,7 +73,222 @@ msgid ""
 "Open Sound System is not supported by this element."
 msgstr ""
 
+msgid "Volume"
+msgstr "Јачина звука"
+
+msgid "Master"
+msgstr ""
+
+msgid "Front"
+msgstr ""
+
+#, fuzzy
+msgid "Rear"
+msgstr "Снимање"
+
+msgid "Headphones"
+msgstr ""
+
+msgid "Center"
+msgstr ""
+
+msgid "LFE"
+msgstr ""
+
+msgid "Surround"
+msgstr ""
+
+#, fuzzy
+msgid "Side"
+msgstr "Видео"
+
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "Звучник"
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr "Бас"
+
+msgid "Treble"
+msgstr "Шум"
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+msgid "Telephone"
+msgstr ""
+
+msgid "Microphone"
+msgstr "Микрофон"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Ул.лин."
+
+msgid "Internal CD"
+msgstr ""
+
+#, fuzzy
+msgid "Video In"
+msgstr "Видео"
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "ПЦМ"
+
+#, fuzzy
+msgid "Record Gain"
+msgstr "Снимање"
+
+#, fuzzy
+msgid "Output Gain"
+msgstr "Из. пој."
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Микрофон"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr ""
+
+#, fuzzy
+msgid "Record Source"
+msgstr "Снимање"
+
+#, fuzzy
+msgid "Monitor Source"
+msgstr "Праћење"
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr "Праћење"
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr ""
+
+msgid "Surround Sound"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Микрофон"
+
+#, fuzzy
+msgid "Speaker Source"
+msgstr "Звучник"
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Микрофон"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr ""
+
+msgid "Stereo Mix"
+msgstr ""
+
+msgid "Mono Mix"
+msgstr ""
+
+msgid "Input Mix"
+msgstr ""
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Микрофон"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Микрофон"
+
+#, fuzzy
+msgid "Digital Out"
+msgstr "Диг. 1"
+
+#, fuzzy
+msgid "Digital In"
+msgstr "Диг. 1"
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr ""
+
+msgid "Off"
+msgstr ""
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
+msgstr ""
+
+msgid "Very Low"
 msgstr ""
 
 msgid "Low"
@@ -85,196 +300,100 @@ msgstr ""
 msgid "High"
 msgstr ""
 
-msgid "Very high"
+msgid "Very High"
 msgstr ""
 
 msgid "Production"
 msgstr ""
 
-msgid "Off"
-msgstr ""
-
-msgid "On"
-msgstr ""
-
-msgid "Stereo"
-msgstr ""
-
-msgid "Surround sound"
-msgstr ""
-
-msgid "Input mix"
-msgstr ""
-
-msgid "Front"
-msgstr ""
-
 #, fuzzy
-msgid "Rear"
-msgstr "Снимање"
-
-#, fuzzy
-msgid "Side"
-msgstr "Видео"
-
-msgid "Center / LFE"
-msgstr ""
-
-msgid "Microphone"
+msgid "Front Panel Microphone"
 msgstr "Микрофон"
 
-msgid "Front panel microphone"
+msgid "Front Panel Line In"
 msgstr ""
 
-msgid "Input"
+msgid "Front Panel Headphones"
 msgstr ""
 
-msgid "Line-in"
-msgstr "Ул.лин."
-
-#, fuzzy
-msgid "PCM 1"
-msgstr "ПЦМ"
-
-#, fuzzy
-msgid "PCM 2"
-msgstr "ПЦМ-2"
-
-#, fuzzy
-msgid "PCM 3"
-msgstr "ПЦМ"
-
-#, fuzzy
-msgid "PCM 4"
-msgstr "ПЦМ"
-
-msgid "Green connector"
+msgid "Front Panel Line Out"
 msgstr ""
 
-msgid "Green front panel connector"
+msgid "Green Connector"
 msgstr ""
 
-msgid "Pink connector"
+msgid "Pink Connector"
 msgstr ""
 
-msgid "Pink front panel connector"
+msgid "Blue Connector"
 msgstr ""
 
-msgid "Blue connector"
+msgid "White Connector"
 msgstr ""
 
-msgid "Blue front panel connector"
+msgid "Black Connector"
 msgstr ""
 
-msgid "Orange connector"
+msgid "Gray Connector"
 msgstr ""
 
-msgid "Orange front panel connector"
+msgid "Orange Connector"
 msgstr ""
 
-msgid "Black connector"
+msgid "Red Connector"
 msgstr ""
 
-msgid "Black front panel connector"
+msgid "Yellow Connector"
 msgstr ""
 
-msgid "Gray connector"
+msgid "Green Front Panel Connector"
 msgstr ""
 
-msgid "Gray front panel connector"
+msgid "Pink Front Panel Connector"
 msgstr ""
 
-msgid "White connector"
+msgid "Blue Front Panel Connector"
 msgstr ""
 
-msgid "White front panel connector"
+msgid "White Front Panel Connector"
 msgstr ""
 
-msgid "Red connector"
+msgid "Black Front Panel Connector"
 msgstr ""
 
-msgid "Red front panel connector"
+msgid "Gray Front Panel Connector"
 msgstr ""
 
-msgid "Yellow connector"
+msgid "Orange Front Panel Connector"
 msgstr ""
 
-msgid "Yellow front panel connector"
+msgid "Red Front Panel Connector"
 msgstr ""
 
-msgid "Green connector function"
+msgid "Yellow Front Panel Connector"
 msgstr ""
 
-msgid "Green front panel connector function"
+msgid "Spread Output"
 msgstr ""
 
-msgid "Pink connector function"
+msgid "Downmix"
 msgstr ""
 
-msgid "Pink front panel connector function"
+msgid "Virtual Mixer Input"
 msgstr ""
 
-msgid "Blue connector function"
+msgid "Virtual Mixer Output"
 msgstr ""
 
-msgid "Blue front panel connector function"
+msgid "Virtual Mixer Channels"
 msgstr ""
 
-msgid "Orange connector function"
+#, c-format
+msgid "%s Function"
 msgstr ""
 
-msgid "Orange front panel connector function"
-msgstr ""
-
-msgid "Black connector function"
-msgstr ""
-
-msgid "Black front panel connector function"
-msgstr ""
-
-msgid "Gray connector function"
-msgstr ""
-
-msgid "Gray front panel connector function"
-msgstr ""
-
-msgid "White connector function"
-msgstr ""
-
-msgid "White front panel connector function"
-msgstr ""
-
-msgid "Red connector function"
-msgstr ""
-
-msgid "Red front panel connector function"
-msgstr ""
-
-msgid "Yellow connector function"
-msgstr ""
-
-msgid "Yellow front panel connector function"
-msgstr ""
-
-msgid "Front panel line-in"
-msgstr ""
-
-msgid "Headphones"
-msgstr ""
-
-msgid "Front panel headphones"
-msgstr ""
-
-msgid "PCM"
-msgstr "ПЦМ"
-
-msgid "Virtual mixer input"
-msgstr ""
-
-msgid "Virtual mixer output"
-msgstr ""
-
-msgid "Virtual mixer channel configuration"
+#, c-format
+msgid "%s %d"
 msgstr ""
 
 msgid ""
@@ -356,20 +475,8 @@ msgstr ""
 #~ msgid "Could not open device \"%s\" for reading."
 #~ msgstr "Не могу да отворим уређај „%s“ ради читања."
 
-#~ msgid "Volume"
-#~ msgstr "Јачина звука"
-
-#~ msgid "Bass"
-#~ msgstr "Бас"
-
-#~ msgid "Treble"
-#~ msgstr "Шум"
-
 #~ msgid "Synth"
 #~ msgstr "Синт."
-
-#~ msgid "Speaker"
-#~ msgstr "Звучник"
 
 #~ msgid "CD"
 #~ msgstr "ЦД"
@@ -377,11 +484,11 @@ msgstr ""
 #~ msgid "Mixer"
 #~ msgstr "Миксер"
 
+#~ msgid "PCM-2"
+#~ msgstr "ПЦМ-2"
+
 #~ msgid "In-gain"
 #~ msgstr "Ул. пој."
-
-#~ msgid "Out-gain"
-#~ msgstr "Из. пој."
 
 #~ msgid "Line-1"
 #~ msgstr "Лин. 1"
@@ -391,9 +498,6 @@ msgstr ""
 
 #~ msgid "Line-3"
 #~ msgstr "Лин. 3"
-
-#~ msgid "Digital-1"
-#~ msgstr "Диг. 1"
 
 #~ msgid "Digital-2"
 #~ msgstr "Диг. 2"
@@ -409,13 +513,6 @@ msgstr ""
 
 #~ msgid "Radio"
 #~ msgstr "Радио"
-
-#~ msgid "Monitor"
-#~ msgstr "Праћење"
-
-#, fuzzy
-#~ msgid "PC Speaker"
-#~ msgstr "Звучник"
 
 #~ msgid "Could not open CD device for reading."
 #~ msgstr "Не могу да отворим ЦД уређај ради читања."
