--- a/gst-plugins-bad/po/sv.po
+++ b/gst-plugins-bad/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.9.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-01-23 00:44+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -71,8 +71,221 @@ msgstr ""
 "Kunde inte öppna ljudenheten för mixningshantering. Denna version av Open "
 "Sound System stöds inte av detta element."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Snabb"
+
+msgid "Front"
+msgstr "Fram"
+
+msgid "Rear"
+msgstr "Bak"
+
+msgid "Headphones"
+msgstr "Hörlurar"
+
+# LFE=lågfrekvenseffekter
+#, fuzzy
+msgid "Center"
+msgstr "Center / LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Surroundljud"
+
+msgid "Side"
+msgstr "Sida"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Hörlurar"
+
+msgid "Microphone"
+msgstr "Mikrofon"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Linje-in"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Mikrofon"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Ingång"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Stereo"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Surroundljud"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Mikrofon"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Mikrofon"
+
+msgid "Jack"
+msgstr ""
+
+# LFE=lågfrekvenseffekter
+msgid "Center / LFE"
+msgstr "Center / LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Stereo"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Ingångsmix"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Mikrofon"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Mikrofon"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "På"
+
+msgid "Off"
+msgstr "Av"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Snabb"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Låg"
@@ -83,192 +296,126 @@ msgstr "Medel"
 msgid "High"
 msgstr "Hög"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Mycket hög"
 
 msgid "Production"
 msgstr "Produktion"
 
-msgid "Off"
-msgstr "Av"
-
-msgid "On"
-msgstr "På"
-
-msgid "Stereo"
-msgstr "Stereo"
-
-msgid "Surround sound"
-msgstr "Surroundljud"
-
-msgid "Input mix"
-msgstr "Ingångsmix"
-
-msgid "Front"
-msgstr "Fram"
-
-msgid "Rear"
-msgstr "Bak"
-
-msgid "Side"
-msgstr "Sida"
-
-# LFE=lågfrekvenseffekter
-msgid "Center / LFE"
-msgstr "Center / LFE"
-
-msgid "Microphone"
-msgstr "Mikrofon"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Frontpanelsmikrofon"
 
-msgid "Input"
-msgstr "Ingång"
-
-msgid "Line-in"
-msgstr "Linje-in"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Grön kontakt"
-
-msgid "Green front panel connector"
-msgstr "Grön frontpanelskontakt"
-
-msgid "Pink connector"
-msgstr "Rosa kontakt"
-
-msgid "Pink front panel connector"
-msgstr "Rosa frontpanelskontakt"
-
-msgid "Blue connector"
-msgstr "Blå kontakt"
-
-msgid "Blue front panel connector"
-msgstr "Blå frontpanelskontakt"
-
-msgid "Orange connector"
-msgstr "Orange kontakt"
-
-msgid "Orange front panel connector"
-msgstr "Orange frontpanelskontakt"
-
-msgid "Black connector"
-msgstr "Svart kontakt"
-
-msgid "Black front panel connector"
-msgstr "Svart frontpanelskontakt"
-
-msgid "Gray connector"
-msgstr "Grå kontakt"
-
-msgid "Gray front panel connector"
-msgstr "Grå frontpanelskontakt"
-
-msgid "White connector"
-msgstr "Vit kontakt"
-
-msgid "White front panel connector"
-msgstr "Vit frontpanelskontakt"
-
-msgid "Red connector"
-msgstr "Röd kontakt"
-
-msgid "Red front panel connector"
-msgstr "Röd frontpanelskontakt"
-
-msgid "Yellow connector"
-msgstr "Gul kontakt"
-
-msgid "Yellow front panel connector"
-msgstr "Gul frontpanelskontakt"
-
-msgid "Green connector function"
-msgstr "Funktion för grön kontakt"
-
-msgid "Green front panel connector function"
-msgstr "Funktion för grön frontpanelskontakt"
-
-msgid "Pink connector function"
-msgstr "Funktion för rosa kontakt"
-
-msgid "Pink front panel connector function"
-msgstr "Funktion för rosa frontpanelskontakt"
-
-msgid "Blue connector function"
-msgstr "Funktion för blå kontakt"
-
-msgid "Blue front panel connector function"
-msgstr "Funktion för blå frontpanelskontakt"
-
-msgid "Orange connector function"
-msgstr "Funktion för orange kontakt"
-
-msgid "Orange front panel connector function"
-msgstr "Funktion för orange frontpanelskontakt"
-
-msgid "Black connector function"
-msgstr "Funktion för svart kontakt"
-
-msgid "Black front panel connector function"
-msgstr "Funktion för svart frontpanelskontakt"
-
-msgid "Gray connector function"
-msgstr "Funktion för grå kontakt"
-
-msgid "Gray front panel connector function"
-msgstr "Funktion för grå frontpanelskontakt"
-
-msgid "White connector function"
-msgstr "Funktion för vit kontakt"
-
-msgid "White front panel connector function"
-msgstr "Funktion för vit frontpanelskontakt"
-
-msgid "Red connector function"
-msgstr "Funktion för röd kontakt"
-
-msgid "Red front panel connector function"
-msgstr "Funktion för röd frontpanelskontakt"
-
-msgid "Yellow connector function"
-msgstr "Funktion för gul kontakt"
-
-msgid "Yellow front panel connector function"
-msgstr "Funktion för gul frontpanelskontakt"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Linje-in på frontpanel"
 
-msgid "Headphones"
-msgstr "Hörlurar"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Hörlurar på frontpanel"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Linje-in på frontpanel"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Grön kontakt"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Rosa kontakt"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Blå kontakt"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Vit kontakt"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Svart kontakt"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Grå kontakt"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Orange kontakt"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Röd kontakt"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Gul kontakt"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Grön frontpanelskontakt"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Rosa frontpanelskontakt"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Blå frontpanelskontakt"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Vit frontpanelskontakt"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Svart frontpanelskontakt"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Grå frontpanelskontakt"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Orange frontpanelskontakt"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Röd frontpanelskontakt"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Gul frontpanelskontakt"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Virtuell mixeringång"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Virtuell mixerutgång"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Kanalkonfiguration för virtuell mixer"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Virtuell mixeringång"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -317,6 +464,75 @@ msgstr "Fel vid inspelning från ljudenhet."
 #~ msgstr ""
 #~ "Den begärda bitfrekvensen %d kbit/s för egenskapen \"%s\" tillåts inte. "
 #~ "Bitfrekvensen ändrades till %d kbit/s."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Funktion för grön kontakt"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Funktion för grön frontpanelskontakt"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Funktion för rosa kontakt"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Funktion för rosa frontpanelskontakt"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Funktion för blå kontakt"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Funktion för blå frontpanelskontakt"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Funktion för orange kontakt"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Funktion för orange frontpanelskontakt"
+
+#~ msgid "Black connector function"
+#~ msgstr "Funktion för svart kontakt"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Funktion för svart frontpanelskontakt"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Funktion för grå kontakt"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Funktion för grå frontpanelskontakt"
+
+#~ msgid "White connector function"
+#~ msgstr "Funktion för vit kontakt"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Funktion för vit frontpanelskontakt"
+
+#~ msgid "Red connector function"
+#~ msgstr "Funktion för röd kontakt"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Funktion för röd frontpanelskontakt"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Funktion för gul kontakt"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Funktion för gul frontpanelskontakt"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Kanalkonfiguration för virtuell mixer"
 
 #~ msgid "This file is corrupt and cannot be played."
 #~ msgstr "Den här filen är skadad och kan inte spelas upp."
