--- a/gst-plugins-bad/po/uk.po
+++ b/gst-plugins-bad/po/uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.5\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2007-07-04 12:19+0200\n"
 "Last-Translator: Maxim V. Dziumanenko <dziumanenko@gmail.com>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
@@ -72,7 +72,205 @@ msgid ""
 "Open Sound System is not supported by this element."
 msgstr ""
 
+msgid "Volume"
+msgstr ""
+
+msgid "Master"
+msgstr ""
+
+msgid "Front"
+msgstr ""
+
+msgid "Rear"
+msgstr ""
+
+msgid "Headphones"
+msgstr ""
+
+msgid "Center"
+msgstr ""
+
+msgid "LFE"
+msgstr ""
+
+msgid "Surround"
+msgstr ""
+
+msgid "Side"
+msgstr ""
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+msgid "Telephone"
+msgstr ""
+
+msgid "Microphone"
+msgstr ""
+
+msgid "Line Out"
+msgstr ""
+
+msgid "Line In"
+msgstr ""
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr ""
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+msgid "Microphone Boost"
+msgstr ""
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr ""
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr ""
+
+msgid "Surround Sound"
+msgstr ""
+
+msgid "Microphone Gain"
+msgstr ""
+
+msgid "Speaker Source"
+msgstr ""
+
+msgid "Microphone Source"
+msgstr ""
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr ""
+
+msgid "Stereo Mix"
+msgstr ""
+
+msgid "Mono Mix"
+msgstr ""
+
+msgid "Input Mix"
+msgstr ""
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+msgid "Microphone 1"
+msgstr ""
+
+msgid "Microphone 2"
+msgstr ""
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr ""
+
+msgid "Off"
+msgstr ""
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
+msgstr ""
+
+msgid "Very Low"
 msgstr ""
 
 msgid "Low"
@@ -84,190 +282,99 @@ msgstr ""
 msgid "High"
 msgstr ""
 
-msgid "Very high"
+msgid "Very High"
 msgstr ""
 
 msgid "Production"
 msgstr ""
 
-msgid "Off"
+msgid "Front Panel Microphone"
 msgstr ""
 
-msgid "On"
+msgid "Front Panel Line In"
 msgstr ""
 
-msgid "Stereo"
+msgid "Front Panel Headphones"
 msgstr ""
 
-msgid "Surround sound"
+msgid "Front Panel Line Out"
 msgstr ""
 
-msgid "Input mix"
+msgid "Green Connector"
 msgstr ""
 
-msgid "Front"
+msgid "Pink Connector"
 msgstr ""
 
-msgid "Rear"
+msgid "Blue Connector"
 msgstr ""
 
-msgid "Side"
+msgid "White Connector"
 msgstr ""
 
-msgid "Center / LFE"
+msgid "Black Connector"
 msgstr ""
 
-msgid "Microphone"
+msgid "Gray Connector"
 msgstr ""
 
-msgid "Front panel microphone"
+msgid "Orange Connector"
 msgstr ""
 
-msgid "Input"
+msgid "Red Connector"
 msgstr ""
 
-msgid "Line-in"
+msgid "Yellow Connector"
 msgstr ""
 
-msgid "PCM 1"
+msgid "Green Front Panel Connector"
 msgstr ""
 
-msgid "PCM 2"
+msgid "Pink Front Panel Connector"
 msgstr ""
 
-msgid "PCM 3"
+msgid "Blue Front Panel Connector"
 msgstr ""
 
-msgid "PCM 4"
+msgid "White Front Panel Connector"
 msgstr ""
 
-msgid "Green connector"
+msgid "Black Front Panel Connector"
 msgstr ""
 
-msgid "Green front panel connector"
+msgid "Gray Front Panel Connector"
 msgstr ""
 
-msgid "Pink connector"
+msgid "Orange Front Panel Connector"
 msgstr ""
 
-msgid "Pink front panel connector"
+msgid "Red Front Panel Connector"
 msgstr ""
 
-msgid "Blue connector"
+msgid "Yellow Front Panel Connector"
 msgstr ""
 
-msgid "Blue front panel connector"
+msgid "Spread Output"
 msgstr ""
 
-msgid "Orange connector"
+msgid "Downmix"
 msgstr ""
 
-msgid "Orange front panel connector"
+msgid "Virtual Mixer Input"
 msgstr ""
 
-msgid "Black connector"
+msgid "Virtual Mixer Output"
 msgstr ""
 
-msgid "Black front panel connector"
+msgid "Virtual Mixer Channels"
 msgstr ""
 
-msgid "Gray connector"
+#, c-format
+msgid "%s Function"
 msgstr ""
 
-msgid "Gray front panel connector"
-msgstr ""
-
-msgid "White connector"
-msgstr ""
-
-msgid "White front panel connector"
-msgstr ""
-
-msgid "Red connector"
-msgstr ""
-
-msgid "Red front panel connector"
-msgstr ""
-
-msgid "Yellow connector"
-msgstr ""
-
-msgid "Yellow front panel connector"
-msgstr ""
-
-msgid "Green connector function"
-msgstr ""
-
-msgid "Green front panel connector function"
-msgstr ""
-
-msgid "Pink connector function"
-msgstr ""
-
-msgid "Pink front panel connector function"
-msgstr ""
-
-msgid "Blue connector function"
-msgstr ""
-
-msgid "Blue front panel connector function"
-msgstr ""
-
-msgid "Orange connector function"
-msgstr ""
-
-msgid "Orange front panel connector function"
-msgstr ""
-
-msgid "Black connector function"
-msgstr ""
-
-msgid "Black front panel connector function"
-msgstr ""
-
-msgid "Gray connector function"
-msgstr ""
-
-msgid "Gray front panel connector function"
-msgstr ""
-
-msgid "White connector function"
-msgstr ""
-
-msgid "White front panel connector function"
-msgstr ""
-
-msgid "Red connector function"
-msgstr ""
-
-msgid "Red front panel connector function"
-msgstr ""
-
-msgid "Yellow connector function"
-msgstr ""
-
-msgid "Yellow front panel connector function"
-msgstr ""
-
-msgid "Front panel line-in"
-msgstr ""
-
-msgid "Headphones"
-msgstr ""
-
-msgid "Front panel headphones"
-msgstr ""
-
-msgid "PCM"
-msgstr ""
-
-msgid "Virtual mixer input"
-msgstr ""
-
-msgid "Virtual mixer output"
-msgstr ""
-
-msgid "Virtual mixer channel configuration"
+#, c-format
+msgid "%s %d"
 msgstr ""
 
 msgid ""
