--- a/gst-plugins-bad/po/vi.po
+++ b/gst-plugins-bad/po/vi.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.11.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-05-12 21:32+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
@@ -73,8 +73,219 @@ msgstr ""
 "Không thể mở thiết bị âm thanh để quản lý điều khiển máy hoà tiếng. Phiên "
 "bản Hệ thống Âm thanh Mở này không được yếu tố này hỗ trợ."
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "Nhanh"
+
+msgid "Front"
+msgstr "Trước"
+
+msgid "Rear"
+msgstr "Sau"
+
+msgid "Headphones"
+msgstr "Tai nghe"
+
+#, fuzzy
+msgid "Center"
+msgstr "Giữa/LFE"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "Âm thanh vòm"
+
+msgid "Side"
+msgstr "Bên"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "Tai nghe"
+
+msgid "Microphone"
+msgstr "Máy vi âm"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "Dây vào"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "Máy vi âm"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "Vào"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "Âm lập thể"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "Âm thanh vòm"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "Máy vi âm"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "Máy vi âm"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "Giữa/LFE"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "Âm lập thể"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "Hoà tiếng đầu vào"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "Máy vi âm"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "Máy vi âm"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "Bật"
+
+msgid "Off"
+msgstr "Tắt"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "Nhanh"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "Thấp"
@@ -85,191 +296,126 @@ msgstr "Vừa"
 msgid "High"
 msgstr "Cao"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "Rất cao"
 
 msgid "Production"
 msgstr "Sản xuất"
 
-msgid "Off"
-msgstr "Tắt"
-
-msgid "On"
-msgstr "Bật"
-
-msgid "Stereo"
-msgstr "Âm lập thể"
-
-msgid "Surround sound"
-msgstr "Âm thanh vòm"
-
-msgid "Input mix"
-msgstr "Hoà tiếng đầu vào"
-
-msgid "Front"
-msgstr "Trước"
-
-msgid "Rear"
-msgstr "Sau"
-
-msgid "Side"
-msgstr "Bên"
-
-msgid "Center / LFE"
-msgstr "Giữa/LFE"
-
-msgid "Microphone"
-msgstr "Máy vi âm"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "Máy vi âm bảng trước"
 
-msgid "Input"
-msgstr "Vào"
-
-msgid "Line-in"
-msgstr "Dây vào"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "Đầu kẹp lục"
-
-msgid "Green front panel connector"
-msgstr "Đầu kẹp lục bảng trước"
-
-msgid "Pink connector"
-msgstr "Đầu kẹp hồng"
-
-msgid "Pink front panel connector"
-msgstr "Đầu kẹp hồng bảng trước"
-
-msgid "Blue connector"
-msgstr "Đầu kẹp xanh"
-
-msgid "Blue front panel connector"
-msgstr "Đầu kẹp xanh bảng trước"
-
-msgid "Orange connector"
-msgstr "Đầu kẹp cam"
-
-msgid "Orange front panel connector"
-msgstr "Đầu kẹp cam bảng trước"
-
-msgid "Black connector"
-msgstr "Đầu kẹp đen"
-
-msgid "Black front panel connector"
-msgstr "Đầu kẹp đen bảng trước"
-
-msgid "Gray connector"
-msgstr "Đầu kẹp xám"
-
-msgid "Gray front panel connector"
-msgstr "Đầu kẹp xám bảng trước"
-
-msgid "White connector"
-msgstr "Đầu kẹp trắng"
-
-msgid "White front panel connector"
-msgstr "Đầu kẹp trắng bảng trước"
-
-msgid "Red connector"
-msgstr "Đầu kẹp đỏ"
-
-msgid "Red front panel connector"
-msgstr "Đầu kẹp đỏ bảng trước"
-
-msgid "Yellow connector"
-msgstr "Đầu kẹp vàng"
-
-msgid "Yellow front panel connector"
-msgstr "Đầu kẹp vàng bảng trước"
-
-msgid "Green connector function"
-msgstr "Chức năng đầu kẹp lục"
-
-msgid "Green front panel connector function"
-msgstr "Chức năng đầu kẹp lục bảng trước"
-
-msgid "Pink connector function"
-msgstr "Chức năng đầu kẹp hồng"
-
-msgid "Pink front panel connector function"
-msgstr "Chức năng đầu kẹp hồng bảng trước"
-
-msgid "Blue connector function"
-msgstr "Chức năng đầu kẹp xanh"
-
-msgid "Blue front panel connector function"
-msgstr "Chức năng đầu kẹp xanh bảng trước"
-
-msgid "Orange connector function"
-msgstr "Chức năng đầu kẹp cam"
-
-msgid "Orange front panel connector function"
-msgstr "Chức năng đầu kẹp cam bảng trước"
-
-msgid "Black connector function"
-msgstr "Chức năng đầu kẹp đen"
-
-msgid "Black front panel connector function"
-msgstr "Chức năng đầu kẹp đen bảng trước"
-
-msgid "Gray connector function"
-msgstr "Chức năng đầu kẹp xám"
-
-msgid "Gray front panel connector function"
-msgstr "Chức năng đầu kẹp xám bảng trước"
-
-msgid "White connector function"
-msgstr "Chức năng đầu kẹp trắng"
-
-msgid "White front panel connector function"
-msgstr "Chức năng đầu kẹp trắng bảng trước"
-
-msgid "Red connector function"
-msgstr "Chức năng đầu kẹp đỏ"
-
-msgid "Red front panel connector function"
-msgstr "Chức năng đầu kẹp đỏ bảng trước"
-
-msgid "Yellow connector function"
-msgstr "Chức năng đầu kẹp vàng"
-
-msgid "Yellow front panel connector function"
-msgstr "Chức năng đầu kẹp vàng bảng trước"
-
-msgid "Front panel line-in"
+#, fuzzy
+msgid "Front Panel Line In"
 msgstr "Dây vào bảng trước"
 
-msgid "Headphones"
-msgstr "Tai nghe"
-
-msgid "Front panel headphones"
+#, fuzzy
+msgid "Front Panel Headphones"
 msgstr "Tai nghe bảng trước"
 
-msgid "PCM"
-msgstr "PCM"
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "Dây vào bảng trước"
 
-msgid "Virtual mixer input"
+#, fuzzy
+msgid "Green Connector"
+msgstr "Đầu kẹp lục"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "Đầu kẹp hồng"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "Đầu kẹp xanh"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "Đầu kẹp trắng"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "Đầu kẹp đen"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "Đầu kẹp xám"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "Đầu kẹp cam"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "Đầu kẹp đỏ"
+
+#, fuzzy
+msgid "Yellow Connector"
+msgstr "Đầu kẹp vàng"
+
+#, fuzzy
+msgid "Green Front Panel Connector"
+msgstr "Đầu kẹp lục bảng trước"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "Đầu kẹp hồng bảng trước"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "Đầu kẹp xanh bảng trước"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "Đầu kẹp trắng bảng trước"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "Đầu kẹp đen bảng trước"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "Đầu kẹp xám bảng trước"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "Đầu kẹp cam bảng trước"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "Đầu kẹp đỏ bảng trước"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
+msgstr "Đầu kẹp vàng bảng trước"
+
+msgid "Spread Output"
+msgstr ""
+
+msgid "Downmix"
+msgstr ""
+
+#, fuzzy
+msgid "Virtual Mixer Input"
 msgstr "Đầu vào bộ hoà tiếng ảo"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "Đầu ra bộ hoà tiếng ảo"
 
-msgid "Virtual mixer channel configuration"
-msgstr "Cấu hình kênh bộ hoà tiếng ảo"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "Đầu vào bộ hoà tiếng ảo"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -306,3 +452,72 @@ msgstr "Thiết bị âm thanh này không hỗ trợ chức năng thu."
 
 msgid "Error recording from audio device."
 msgstr "Lỗi thu từ thiết bị âm thanh."
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "Chức năng đầu kẹp lục"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "Chức năng đầu kẹp lục bảng trước"
+
+#~ msgid "Pink connector function"
+#~ msgstr "Chức năng đầu kẹp hồng"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "Chức năng đầu kẹp hồng bảng trước"
+
+#~ msgid "Blue connector function"
+#~ msgstr "Chức năng đầu kẹp xanh"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "Chức năng đầu kẹp xanh bảng trước"
+
+#~ msgid "Orange connector function"
+#~ msgstr "Chức năng đầu kẹp cam"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "Chức năng đầu kẹp cam bảng trước"
+
+#~ msgid "Black connector function"
+#~ msgstr "Chức năng đầu kẹp đen"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "Chức năng đầu kẹp đen bảng trước"
+
+#~ msgid "Gray connector function"
+#~ msgstr "Chức năng đầu kẹp xám"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "Chức năng đầu kẹp xám bảng trước"
+
+#~ msgid "White connector function"
+#~ msgstr "Chức năng đầu kẹp trắng"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "Chức năng đầu kẹp trắng bảng trước"
+
+#~ msgid "Red connector function"
+#~ msgstr "Chức năng đầu kẹp đỏ"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "Chức năng đầu kẹp đỏ bảng trước"
+
+#~ msgid "Yellow connector function"
+#~ msgstr "Chức năng đầu kẹp vàng"
+
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "Chức năng đầu kẹp vàng bảng trước"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "Cấu hình kênh bộ hoà tiếng ảo"
