--- a/gst-plugins-bad/po/zh_CN.po
+++ b/gst-plugins-bad/po/zh_CN.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 0.10.9.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-17 21:54+0100\n"
+"POT-Creation-Date: 2009-08-11 17:42+0100\n"
 "PO-Revision-Date: 2009-01-14 12:04+0800\n"
 "Last-Translator: Ji ZhengYu <zhengyuji@gmail.com>\n"
 "Language-Team: Chinese (simplified) <translation-team-zh-cn@lists."
@@ -73,8 +73,219 @@ msgid ""
 msgstr ""
 "无法打开音频设备进行音量控制操作。此部件不支持开放声音系统(OSS)的版本。"
 
+msgid "Volume"
+msgstr ""
+
+#, fuzzy
+msgid "Master"
+msgstr "快"
+
+msgid "Front"
+msgstr "前置声道"
+
+msgid "Rear"
+msgstr "后置声道"
+
+msgid "Headphones"
+msgstr "头戴式耳机"
+
+#, fuzzy
+msgid "Center"
+msgstr "中置/低音炮"
+
+msgid "LFE"
+msgstr ""
+
+#, fuzzy
+msgid "Surround"
+msgstr "立体声环绕"
+
+msgid "Side"
+msgstr "左右声道"
+
+msgid "Built-in Speaker"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
+
+msgid "AUX Out"
+msgstr ""
+
+msgid "Bass"
+msgstr ""
+
+msgid "Treble"
+msgstr ""
+
+msgid "3D Depth"
+msgstr ""
+
+msgid "3D Center"
+msgstr ""
+
+msgid "3D Enhance"
+msgstr ""
+
+#, fuzzy
+msgid "Telephone"
+msgstr "头戴式耳机"
+
+msgid "Microphone"
+msgstr "话筒"
+
+msgid "Line Out"
+msgstr ""
+
+#, fuzzy
+msgid "Line In"
+msgstr "线路输入"
+
+msgid "Internal CD"
+msgstr ""
+
+msgid "Video In"
+msgstr ""
+
+msgid "AUX 1 In"
+msgstr ""
+
+msgid "AUX 2 In"
+msgstr ""
+
+msgid "AUX In"
+msgstr ""
+
+msgid "PCM"
+msgstr "PCM"
+
+msgid "Record Gain"
+msgstr ""
+
+msgid "Output Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Boost"
+msgstr "话筒"
+
+msgid "Loopback"
+msgstr ""
+
+msgid "Diagnostic"
+msgstr ""
+
+msgid "Bass Boost"
+msgstr ""
+
+msgid "Playback Ports"
+msgstr ""
+
+msgid "Input"
+msgstr "输入"
+
+msgid "Record Source"
+msgstr ""
+
+msgid "Monitor Source"
+msgstr ""
+
+msgid "Keyboard Beep"
+msgstr ""
+
+msgid "Monitor"
+msgstr ""
+
+msgid "Simulate Stereo"
+msgstr ""
+
+msgid "Stereo"
+msgstr "立体声"
+
+#, fuzzy
+msgid "Surround Sound"
+msgstr "立体声环绕"
+
+#, fuzzy
+msgid "Microphone Gain"
+msgstr "话筒"
+
+msgid "Speaker Source"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone Source"
+msgstr "话筒"
+
+msgid "Jack"
+msgstr ""
+
+msgid "Center / LFE"
+msgstr "中置/低音炮"
+
+#, fuzzy
+msgid "Stereo Mix"
+msgstr "立体声"
+
+msgid "Mono Mix"
+msgstr ""
+
+#, fuzzy
+msgid "Input Mix"
+msgstr "混音输入"
+
+msgid "SPDIF In"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+#, fuzzy
+msgid "Microphone 1"
+msgstr "话筒"
+
+#, fuzzy
+msgid "Microphone 2"
+msgstr "话筒"
+
+msgid "Digital Out"
+msgstr ""
+
+msgid "Digital In"
+msgstr ""
+
+msgid "HDMI"
+msgstr ""
+
+msgid "Modem"
+msgstr ""
+
+msgid "Handset"
+msgstr ""
+
+msgid "Other"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "On"
+msgstr "开"
+
+msgid "Off"
+msgstr "关"
+
+msgid "Mute"
+msgstr ""
+
 msgid "Fast"
 msgstr "快"
+
+msgid "Very Low"
+msgstr ""
 
 msgid "Low"
 msgstr "慢"
@@ -85,195 +296,126 @@ msgstr "中等"
 msgid "High"
 msgstr "高"
 
-msgid "Very high"
+#, fuzzy
+msgid "Very High"
 msgstr "很高"
 
 msgid "Production"
 msgstr "生产商"
 
-msgid "Off"
-msgstr "关"
-
-msgid "On"
-msgstr "开"
-
-msgid "Stereo"
-msgstr "立体声"
-
-msgid "Surround sound"
-msgstr "立体声环绕"
-
-msgid "Input mix"
-msgstr "混音输入"
-
-msgid "Front"
-msgstr "前置声道"
-
-msgid "Rear"
-msgstr "后置声道"
-
-msgid "Side"
-msgstr "左右声道"
-
-msgid "Center / LFE"
-msgstr "中置/低音炮"
-
-msgid "Microphone"
-msgstr "话筒"
-
-msgid "Front panel microphone"
+#, fuzzy
+msgid "Front Panel Microphone"
 msgstr "话筒面板"
 
-msgid "Input"
-msgstr "输入"
-
-msgid "Line-in"
-msgstr "线路输入"
-
-msgid "PCM 1"
-msgstr "PCM 1"
-
-msgid "PCM 2"
-msgstr "PCM 2"
-
-msgid "PCM 3"
-msgstr "PCM 3"
-
-msgid "PCM 4"
-msgstr "PCM 4"
-
-msgid "Green connector"
-msgstr "线路输出"
-
-msgid "Green front panel connector"
-msgstr "线路输出面板"
-
-msgid "Pink connector"
-msgstr "话筒输出"
-
-msgid "Pink front panel connector"
-msgstr "话筒输出面板"
-
-msgid "Blue connector"
-msgstr "立体声输入"
-
-msgid "Blue front panel connector"
-msgstr "立体声输入面板"
-
-msgid "Orange connector"
-msgstr "低音炮输出"
-
-msgid "Orange front panel connector"
-msgstr "低音炮输出面板"
-
-msgid "Black connector"
-msgstr "后置声道输出"
-
-msgid "Black front panel connector"
-msgstr "后置声道输出面板"
-
-msgid "Gray connector"
-msgstr "中置声道输出"
-
-msgid "Gray front panel connector"
-msgstr "中置声道输出面板"
-
-msgid "White connector"
-msgstr "左/单声道"
-
-msgid "White front panel connector"
-msgstr "左/单声道面板"
-
-msgid "Red connector"
-msgstr "右声道"
-
-msgid "Red front panel connector"
-msgstr "右声道面板"
+#, fuzzy
+msgid "Front Panel Line In"
+msgstr "线路输入面板"
 
 #, fuzzy
-msgid "Yellow connector"
+msgid "Front Panel Headphones"
+msgstr "头戴式耳机面板"
+
+#, fuzzy
+msgid "Front Panel Line Out"
+msgstr "线路输入面板"
+
+#, fuzzy
+msgid "Green Connector"
+msgstr "线路输出"
+
+#, fuzzy
+msgid "Pink Connector"
+msgstr "话筒输出"
+
+#, fuzzy
+msgid "Blue Connector"
+msgstr "立体声输入"
+
+#, fuzzy
+msgid "White Connector"
+msgstr "左/单声道"
+
+#, fuzzy
+msgid "Black Connector"
+msgstr "后置声道输出"
+
+#, fuzzy
+msgid "Gray Connector"
+msgstr "中置声道输出"
+
+#, fuzzy
+msgid "Orange Connector"
+msgstr "低音炮输出"
+
+#, fuzzy
+msgid "Red Connector"
+msgstr "右声道"
+
+#, fuzzy
+msgid "Yellow Connector"
 msgstr "Midi 输出/游戏摇杆"
 
 #, fuzzy
-msgid "Yellow front panel connector"
+msgid "Green Front Panel Connector"
+msgstr "线路输出面板"
+
+#, fuzzy
+msgid "Pink Front Panel Connector"
+msgstr "话筒输出面板"
+
+#, fuzzy
+msgid "Blue Front Panel Connector"
+msgstr "立体声输入面板"
+
+#, fuzzy
+msgid "White Front Panel Connector"
+msgstr "左/单声道面板"
+
+#, fuzzy
+msgid "Black Front Panel Connector"
+msgstr "后置声道输出面板"
+
+#, fuzzy
+msgid "Gray Front Panel Connector"
+msgstr "中置声道输出面板"
+
+#, fuzzy
+msgid "Orange Front Panel Connector"
+msgstr "低音炮输出面板"
+
+#, fuzzy
+msgid "Red Front Panel Connector"
+msgstr "右声道面板"
+
+#, fuzzy
+msgid "Yellow Front Panel Connector"
 msgstr "Midi 输出/游戏摇杆面板"
 
-msgid "Green connector function"
-msgstr "线路输出音效"
+msgid "Spread Output"
+msgstr ""
 
-msgid "Green front panel connector function"
-msgstr "线路输出音效面板"
-
-msgid "Pink connector function"
-msgstr "话筒输出音效"
-
-msgid "Pink front panel connector function"
-msgstr "话筒输出音效面板"
-
-msgid "Blue connector function"
-msgstr "立体声输入音效"
-
-msgid "Blue front panel connector function"
-msgstr "立体声输入音效面板"
-
-msgid "Orange connector function"
-msgstr "低音炮输出音效"
-
-msgid "Orange front panel connector function"
-msgstr "低音炮输出音效面板"
-
-msgid "Black connector function"
-msgstr "后置声道输出音效"
-
-msgid "Black front panel connector function"
-msgstr "后置声道输出音效面板"
-
-msgid "Gray connector function"
-msgstr "中置声道输出音效"
-
-msgid "Gray front panel connector function"
-msgstr "中置声道输出音效面板"
-
-msgid "White connector function"
-msgstr "左/单声道输出音效"
-
-msgid "White front panel connector function"
-msgstr "左/单声道输出音效面板"
-
-msgid "Red connector function"
-msgstr "右声道输出音效"
-
-msgid "Red front panel connector function"
-msgstr "右声道输出音效面板"
+msgid "Downmix"
+msgstr ""
 
 #, fuzzy
-msgid "Yellow connector function"
-msgstr "MIDI 输出音效"
-
-#, fuzzy
-msgid "Yellow front panel connector function"
-msgstr "MIDI 输出音效面板"
-
-msgid "Front panel line-in"
-msgstr "线路输入面板"
-
-msgid "Headphones"
-msgstr "头戴式耳机"
-
-msgid "Front panel headphones"
-msgstr "头戴式耳机面板"
-
-msgid "PCM"
-msgstr "PCM"
-
-msgid "Virtual mixer input"
+msgid "Virtual Mixer Input"
 msgstr "模拟混音输入"
 
-msgid "Virtual mixer output"
+#, fuzzy
+msgid "Virtual Mixer Output"
 msgstr "模拟混音输出"
 
-msgid "Virtual mixer channel configuration"
-msgstr "模拟混音器设置"
+#, fuzzy
+msgid "Virtual Mixer Channels"
+msgstr "模拟混音输入"
+
+#, c-format
+msgid "%s Function"
+msgstr ""
+
+#, c-format
+msgid "%s %d"
+msgstr ""
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -312,3 +454,74 @@ msgstr "从音频设备录音时发生错误。"
 #~ "The requested bitrate %d kbit/s for property '%s' is not allowed. The "
 #~ "bitrate was changed to %d kbit/s."
 #~ msgstr "不允许使用“%2$s”所请求的码率 %1$d kbit/s。码率改为 %3$d kbit/s。"
+
+#~ msgid "PCM 1"
+#~ msgstr "PCM 1"
+
+#~ msgid "PCM 2"
+#~ msgstr "PCM 2"
+
+#~ msgid "PCM 3"
+#~ msgstr "PCM 3"
+
+#~ msgid "PCM 4"
+#~ msgstr "PCM 4"
+
+#~ msgid "Green connector function"
+#~ msgstr "线路输出音效"
+
+#~ msgid "Green front panel connector function"
+#~ msgstr "线路输出音效面板"
+
+#~ msgid "Pink connector function"
+#~ msgstr "话筒输出音效"
+
+#~ msgid "Pink front panel connector function"
+#~ msgstr "话筒输出音效面板"
+
+#~ msgid "Blue connector function"
+#~ msgstr "立体声输入音效"
+
+#~ msgid "Blue front panel connector function"
+#~ msgstr "立体声输入音效面板"
+
+#~ msgid "Orange connector function"
+#~ msgstr "低音炮输出音效"
+
+#~ msgid "Orange front panel connector function"
+#~ msgstr "低音炮输出音效面板"
+
+#~ msgid "Black connector function"
+#~ msgstr "后置声道输出音效"
+
+#~ msgid "Black front panel connector function"
+#~ msgstr "后置声道输出音效面板"
+
+#~ msgid "Gray connector function"
+#~ msgstr "中置声道输出音效"
+
+#~ msgid "Gray front panel connector function"
+#~ msgstr "中置声道输出音效面板"
+
+#~ msgid "White connector function"
+#~ msgstr "左/单声道输出音效"
+
+#~ msgid "White front panel connector function"
+#~ msgstr "左/单声道输出音效面板"
+
+#~ msgid "Red connector function"
+#~ msgstr "右声道输出音效"
+
+#~ msgid "Red front panel connector function"
+#~ msgstr "右声道输出音效面板"
+
+#, fuzzy
+#~ msgid "Yellow connector function"
+#~ msgstr "MIDI 输出音效"
+
+#, fuzzy
+#~ msgid "Yellow front panel connector function"
+#~ msgstr "MIDI 输出音效面板"
+
+#~ msgid "Virtual mixer channel configuration"
+#~ msgstr "模拟混音器设置"
